--- a/cfg/stripper/zonemod/maps/c10m1_caves.cfg
+++ b/cfg/stripper/zonemod/maps/c10m1_caves.cfg
@@ -7,9 +7,9 @@ add:
 	"origin" "-12501 -14105 -67"
 	"angles" "1785 530 360"
 	"model" "models/props_vehicles/bus01.mdl"
+	"disableshadows" "1"
 	"classname" "prop_dynamic"
 }
-
 ; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
