--- a/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
@@ -13,18 +13,19 @@ modify:
 		"origin" "850 -5700 -47"
 	}
 }
-; ---SI ladder to get behind event holdout spot
+; --- SI ladder to get behind event holdout spot
 add:
 {
-	"model" "*172"
-	"normal.z" "0.000000"
-	"normal.y" "0.000000"
-	"normal.x" "-1.000000"
+	"model" "*88"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
 	"team" "2"
 	"classname" "func_simpleladder"
-	"origin" "5143 -52.5 59.08"
+	"origin" "6752.00 -7649.99 0.00"
+	"angles" "0.00 180.00 0.00"
 }
-;---Ladder to get on top of roof across door choke
+;--- Ladder to get on top of roof across door choke
 {
 	"model" "*288"
 	"normal.z" "0.000000"
@@ -34,7 +35,116 @@ add:
 	"classname" "func_simpleladder"
 	"origin" "699 -1381 264.22"
 }
-
+;--- Ladders to get out of stuck spots for SI
+{
+	;--- Above first door choke
+	"model" "*202"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-612.77 -472.94 320.03"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	;--- Same as previous, but on other side of building
+	"model" "*201"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "17.13 -618.44 320.03"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	;--- After diner, behind second set of black fences
+	"model" "*85"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-268.93 -736.87 -44.05"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	;--- Behind wood fence after diner black fences
+	"model" "*172"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1113.04 67.36 -40.66"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	;--- Same as previous ladder but behind a stone wall
+	"model" "*172"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-997.04 -972.59 12.00"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Prevent stuck surf behind wall near humvee right at beginning
+{
+	"origin" "-5126 -841 -64"
+	"mins" "0 -318 0"
+	"maxs" "15 0 30"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+;--- Make getting to other side of roof after bus/diner a little more intuitive
+{
+	"model" "*308"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-159.11 560.96 278.02"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Plank to cross rooftops without strafe jumping around an invisible wall
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -70 0"
+	"disableshadows" "1"
+	"model" "models/props_swamp/plank001b_192.mdl"
+	"solid" "6"
+	"origin" "-1402.00 -4771.60 356"
+}
+;--- Block breakable storefront since there's no navmesh in there
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/shelvinggrocery01.mdl"
+	"solid" "6"
+	"origin" "1882 -3539 -56"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/shelvinggrocery01.mdl"
+	"solid" "6"
+	"origin" "1981 -3539 -56"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/shelvinggrocery01.mdl"
+	"solid" "6"
+	"origin" "1766 -3539 -56"
+}
 ; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
