--- a/cfg/stripper/zonemod/maps/c10m5_houseboat.cfg
+++ b/cfg/stripper/zonemod/maps/c10m5_houseboat.cfg
@@ -35,6 +35,26 @@ add:
 	"BlockType" "2"
 	"classname" "env_physics_blocker"
 }
+; --- Ladder to get on top of rocks faster in corner of campsite
+{
+	"model" "*137"
+	"normal.z" "0.46"
+	"normal.y" "0.00"
+	"normal.x" "-0.88"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-10.64 -1396.27 -57.27"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Invisible block so survivors don't get caught on new ladder
+{
+	"origin" "6350 -4225 -150"
+	"mins" "-5 0 -200"
+	"maxs" "40 169 1500"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
 ; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
