--- a/cfg/stripper/zonemod/maps/c11m1_greenhouse.cfg
+++ b/cfg/stripper/zonemod/maps/c11m1_greenhouse.cfg
@@ -1,7 +1,7 @@
 ; =====================================================
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
-;--- block roof access to SI without vertical mobility
+; --- block roof access to SI without vertical mobility
 add:
 {
 	"origin" "6282 -230 1020"
@@ -11,24 +11,210 @@ add:
 	"BlockType" "2"
 	"classname" "env_physics_blocker"
 }
-; =====================================================
-; ===============  PILL CABINET TWEAK  ================
-; =====================================================
-
-; --- set pill cabs to have a max of 2 pills
-
-modify:
+; --- QoL ladder to get on top of roof opposite the greenhouse faster
 {
-	match:
-	{
-		"model" "models/props_interiors/medicalcabinet02.mdl"
-	}
-	replace:
-	{
-		"HealthCount" "2"
-	}
+	"model" "*64"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5357.00 -2651.50 46.01"
+	"angles" "0.00 90.00 0.00"
 }
-
+; --- prop for ladder
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "4334 -96 846"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "4334 -96 590"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "4334 -96 334"
+}
+; --- ladder to help SI get back in-bounds if they go out of bounds
+{
+	"model" "*62"	
+	"normal.z" "0.00"
+	"normal.y" "-0.99"
+	"normal.x" "0.05"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1055.02 -3018.05 8.31"
+	"angles" "0.00 0.00 0.00"
+}
+; --- make saferoom drop a one-way (cover doorway in thick vines)
+{
+	"classname" "prop_dynamic"
+	"angles" "0 180 -98"
+	"disableshadows" "1"
+	"model" "models/props_foliage/urban_vine02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "6382 -305 715"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 180 -98"
+	"disableshadows" "1"
+	"model" "models/props_foliage/urban_vine01.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "6400 -355 725"
+}
+filter:
+; --- remove door
+{
+	"hammerid" "5736893"
+}
+add:
+; --- place invisible block so survivors cannot pass through ivy
+{
+	"origin" "6384 -404 776"
+	"mins" "0 -66 -104"
+	"maxs" "16 0 0"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- new ammo pile under the saferoom
+{
+	"classname" "prop_dynamic"
+	"angles" "0 132 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "6353 -1024 672"
+}
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "6351 -1031 711.25"
+	"spawnflags" "2"
+	"solid" "6"
+	"model" "models/props_unique/spawn_apartment/coffeeammo.mdl"
+	"disableshadows" "1"
+	"count" "5"
+	"angles" "0 175 0"
+}
+; --- optional ladder for SI into the beginning saferoom
+{
+	"model" "*94"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1129.26 89.05 -51.02"
+	"angles" "0.00 0.00 0.00"
+}
+; --- improve clipping on pots under ladder
+{
+	"origin" "6279 -301 672"
+	"mins" "-102 -42 0"
+	"maxs" "0.1 0.1 17.5"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "6189 -331 672"
+	"mins" "0 -27 0"
+	"maxs" "41 0 17.5"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "6216 -355.55 672"
+	"mins" "-10 -18 0"
+	"maxs" "45 0 17.5"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "6178 -335 672"
+	"mins" "-35 0 0"
+	"maxs" "0 35 17.5"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "6146 -310 672"
+	"mins" "-47 -10 0"
+	"maxs" "0.1 36 17.5"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- ladder to get to upper level in end saferoom building for SI spawns
+{
+	"model" "*64"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5838.31 218.80 -264.99"
+	"angles" "0.00 90.00 0.00"
+}
+; --- prop for ladder
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "4815 2784 440"
+}
+; --- ramps for upper area
+{
+	"classname" "prop_dynamic"
+	"angles" "40 0 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "4938 2355 211.73"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "40 0 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "4938 2474 211.73"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "40 0 0"
+	"disableshadows" "1"
+	"model" "models/props_highway/plywood_02.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "4938 2586 211.73"
+}
 ; =====================================================
 ; ================  EXPLOITS BLOCKED  =================
 ; =====================================================
@@ -39,7 +225,7 @@ add:
 	; invisible block over far left rail
 	"origin" "5630 -990 1288"
 	"mins" "-394 -4 -440"
-	"maxs" "394 4 440"
+	"maxs" "658 4 440"
 	"initialstate" "1"
 	"BlockType" "1"
 	"classname" "env_physics_blocker"
@@ -48,7 +234,7 @@ add:
 	; invisible block over middle left rail
 	"origin" "5630 -752 1288"
 	"mins" "-394 -4 -440"
-	"maxs" "394 4 440"
+	"maxs" "658 4 440"
 	"initialstate" "1"
 	"BlockType" "1"
 	"classname" "env_physics_blocker"
@@ -57,7 +243,7 @@ add:
 	; invisible block over middle right rail
 	"origin" "5630 -514 1288"
 	"mins" "-394 -4 -440"
-	"maxs" "394 4 440"
+	"maxs" "658 4 440"
 	"initialstate" "1"
 	"BlockType" "1"
 	"classname" "env_physics_blocker"
@@ -66,7 +252,7 @@ add:
 	; invisible block over far right rail
 	"origin" "5630 -276 1288"
 	"mins" "-394 -4 -440"
-	"maxs" "394 4 440"
+	"maxs" "601 4 440"
 	"initialstate" "1"
 	"BlockType" "1"
 	"classname" "env_physics_blocker"
@@ -118,33 +304,3 @@ add:
 	"BlockType" "1"
 	"classname" "env_physics_blocker"
 }
-
-; =====================================================
-;add:
-;{
-;   "classname" "prop_dynamic"
-;   "angles" "0 0 0"
-;   "disableshadows" "1"
-;   "model" "models/props_urban/chimney002.mdl"
-;   "rendercolor" "255 255 255"
-;   "solid" "6"
-;   "origin" "5224 -752 922"
-;}
-;{
-;   "classname" "prop_dynamic"
-;   "angles" "0 0 0"
-;   "disableshadows" "1"
-;   "model" "models/props_urban/chimney002.mdl"
-;   "rendercolor" "255 255 255"
-;   "solid" "6"
-;   "origin" "5224 -752 954"
-;}
-;{
-;   "classname" "prop_dynamic"
-;   "angles" "0 0 0"
-;   "disableshadows" "1"
-;   "model" "models/props_urban/chimney002.mdl"
-;   "rendercolor" "255 255 255"
-;   "solid" "6"
-;   "origin" "5216 -752 922"
-;}
