--- a/cfg/stripper/zonemod/maps/c11m3_garage.cfg
+++ b/cfg/stripper/zonemod/maps/c11m3_garage.cfg
@@ -1,4 +1,83 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- consistency ladder onto beginning saferoom from the normally out-of-bounds street
+add:
+{
+	"model" "*150"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1916.00 -8799.50 -0.00"
+	"angles" "0.00 270.00 0.00"
+}
+; --- ladder behind the burning event wood pile that allows for a quick commit if fire escape jump is failed
+{
+	"model" "*188"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-421.00 0.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- visual prop for new ladder
+{
+	"classname" "prop_dynamic"
+	"angles" "90 0 0"
+	"disableshadows" "1"
+	"model" "models/props_pipes/pipeset02d_128_001a_fixednormals.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "-5167 -1039 176"
+}
+; --- ladder into windowed area near large energy transmission tower
+{
+	"model" "*178"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "128.00 -1840.00 -1.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- pipe prop for ladder
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "-2960 1264 176"
+}
+; --- block players from standing under lights while on top of white tanks in first forklift room (could get stuck)
+{
+	"origin" "-3926 2602 132"
+	"mins" "-174 0 0"
+	"maxs" "122 61 10"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-3670 2214 132"
+	"mins" "-206 0 0"
+	"maxs" "90 110 10"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- filter a misleading ladder in the last forklift room where valve improperly made an all-teams invisible wall
+filter:
+{
+	"hammerid" "7467212"
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
