--- a/cfg/stripper/zonemod/maps/c11m4_terminal.cfg
+++ b/cfg/stripper/zonemod/maps/c11m4_terminal.cfg
@@ -1,4 +1,73 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+add:
+; === ladder improvements in baggage/conveyor belt area ===
+; --- add ladder symmetry to both bag piles in conveyor area
+{
+	"model" "*145"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1112.00 3158.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*146"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1120.00 5574.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+; --- symmetrical ladder through a vent between the baggage piles
+{
+	"model" "*91"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "964.00 4155.95 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+; --- clipping so survivors do not get caught on the above ladder
+{
+	"origin" "541 2072 316"
+	"mins" "-165 -2 0"
+	"maxs" "0 0 170"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- ladder to climb onto belt in dark conveyor corner
+{
+	"model" "*91"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-74.29 1032.05 -9.99"
+	"angles" "0.00 0.00 0.00"
+}
+; --- move one auto-crouch trigger to cause less unwanted crouching in the baggage area
+modify:
+{
+	match:
+	{
+		"hammerid" "5361452"
+	}
+	replace:
+	{
+		"origin" "467.43 2076 401.25"
+	}
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
