--- a/cfg/stripper/zonemod/maps/c12m5_cornfield.cfg
+++ b/cfg/stripper/zonemod/maps/c12m5_cornfield.cfg
@@ -1,4 +1,17 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+add:
+;--- block rock stuck spot near field drop
+{
+	"origin" "8538 4224 500"
+	"mins" "-30 -105 0"
+	"maxs" "70 0 162"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 
@@ -200,6 +213,14 @@ add:
 ; ============= OUT OF MAP EXPLOIT FIXES  =============
 ; =====================================================
 add:
+{
+	"origin" "4480 3741 450"
+	"mins" "-100 0 -45"
+	"maxs" "100 290 0.1"
+	"initialstate" "1"
+	"BlockType" "3"
+	"classname" "env_physics_blocker"
+}
 {
 	"origin" "8775 4872 455"
 	"mins" "-400 -200 -45"
