--- a/cfg/stripper/zonemod/maps/c2m1_highway.cfg
+++ b/cfg/stripper/zonemod/maps/c2m1_highway.cfg
@@ -1,4 +1,21 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- Fixes infected ladder at the end of the map near the end saferoom
+modify:
+{
+	match:
+	{
+		"model" "*111"
+	}
+	replace:
+	{
+    		"normal.z" "0.00"
+    		"normal.y" "0.00"
+    		"normal.x" "-1.00"
+	}
+}
+; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 ; replace hrs with other guns
