--- a/cfg/stripper/zonemod/maps/c5m1_waterfront.cfg
+++ b/cfg/stripper/zonemod/maps/c5m1_waterfront.cfg
@@ -1,4 +1,19 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- ladder to make getting on top of the corner building more obvious
+add:
+{
+	"model" "*2"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "618.68 -165.96 151.52"
+	"angles" "0.00 0.00 0.00"
+}
+; =====================================================
 ; ================  EXPLOITS BLOCKED  =================
 ; =====================================================
 
