--- a/cfg/stripper/zonemod/maps/c5m2_park.cfg
+++ b/cfg/stripper/zonemod/maps/c5m2_park.cfg
@@ -2,7 +2,7 @@
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
 add:
-;--- ladder to get on top of saferoom marginally faster
+; --- ladder to get on top of saferoom marginally faster
 {
 	"model" "*45"
 	"normal.z" "0.00"
@@ -13,7 +13,7 @@ add:
 	"origin" "-12326.00 -6358.00 -121.00"
 	"angles" "0.00 180.00 0.00"
 }
-;--- ladder to get out of stuck spot near opening saferoom
+; --- ladder to get out of stuck spot near opening saferoom
 {
 	"model" "*77"
 	"normal.z" "0.00"
@@ -24,8 +24,19 @@ add:
 	"origin" "-1016.81 -286.96 151.99"
 	"angles" "0.00 0.00 0.00"
 }
-;--- Invisible block to prevent stuck spot under roof as well as extend the roof a bit so
-;--- that the jump to the overpass before the event truck is easier
+; --- Small QoL ladder near medkit-spawning tent to climb over fence if rushing as tank
+{
+	"model" "*67"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-16250.03 -7121.76 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+; --- Invisible block to prevent stuck spot under roof as well as extend the roof a bit so
+; --- that the jump to the overpass before the event truck is easier
 {
 	"origin" "-9070 -4752 176.57"
 	"mins" "-146 -10 -40"
@@ -34,7 +45,94 @@ add:
 	"BlockType" "2"
 	"classname" "env_physics_blocker"
 }
-; -- Prevent a random weapon spawn removal that only affects the first round
+; --- Ladder to maneuver around rooftops during event faster
+{
+	"model" "*20"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-442.03 820.75 184.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Extra ladder at corner of event as an alternative to parkour
+{
+	"model" "*45"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1405.56 169.94 -101.78"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Pipe props behind ladders on bus station that are really hard to see
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "-7488 -7051.5 7.5"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "140 140 140"
+	"solid" "0"
+	"origin" "-7648 -7051.5 120"
+}
+; --- move ladder for above prop so that it doesn't clip with the pipe
+modify:
+{
+	match:
+	{
+		"hammerid" "1169678"
+	}
+	insert:
+	{
+		"origin" "4.50 0.00 0.00"
+	}
+}
+; --- Extra ladder on top of bus station for faster general movement
+add:
+{
+	"model" "*63"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-259.00 242.00 -32.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Ladder to climb onto bridge faster from bus building
+{
+	"model" "*63"
+	"normal.z" "0.25"
+	"normal.y" "0.00"
+	"normal.x" "0.96"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2078.90 -119.26 1960.03"
+	"angles" "-15.00 0.00 0.00"
+}
+; --- Ladder to get onto bus depot near end saferoom
+{
+	"model" "*33"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-15729.72 1245.96 -5.00"
+	"angles" "0.00 90.00 0.00"
+}
+; --- Prevent a random weapon spawn removal that only affects the first round
 filter:
 {
 	"targetname" "case_weapon_spawn"
@@ -897,60 +995,6 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7031 23.9177"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7072 23.9177"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7072 55.9177"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7031 55.9177"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7072 87.9177"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7031 87.9177"
-}
-{
-	"classname" "prop_dynamic"
 	"angles" "0 90 0"
 	"disableshadows" "1"
 	"model" "models/props_rooftop/hotel_rooftop_equip002.mdl"
@@ -1598,24 +1642,6 @@ add:
 	"origin" "-8045.42 -5602.06 -137.554"
 }
 {
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7031 -8.08232"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "0"
-	"origin" "-7645 -7072 -8.08232"
-}
-{
 	; block above added concrete bag stack during event
 	"origin" "-6606 -5121 -54"
 	"mins" "-26.5 -99.5 -203.5"
@@ -1952,4 +1978,32 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 	"classname" "env_physics_blocker"
+}
+; =====================================================
+;
+;     Zonemod Infected Ladder Fixes/Additions
+;
+; =====================================================
+add:
+; -- Add Infected ladder that allows for quicker setups in the "usual" hold out area for the finite horde.
+{
+	"model" "*51"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2094.83 2947.84 24.00"
+	"angles" "0.00 0.00 0.00"
+}
+; -- Add Infected ladder that allows for quicker access to the bridge.
+{
+	"model" "*91"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-471.18 3126.29 254.03"
+	"angles" "0.00 0.00 0.00"
 }
