--- a/cfg/stripper/zonemod/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/zonemod/maps/c5m3_cemetery.cfg
@@ -1,4 +1,182 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+add:
+; --- Ladder to let ghost SI get onto the top of the saferoom faster
+{
+	"model" "*256"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2093.03 15564.35 107.08"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Ladder onto concrete area at beginning from field, replacing oil drums
+{
+	"model" "*88"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-488.41 1005.96 64.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Vine prop to make ladder realistic
+{
+	"classname" "prop_dynamic"
+	"origin" "4870 7168 95"
+	"angles" "0 -90 30"
+	"solid" "0"
+	"rendercolor" "255 255 255"
+	"model" "models/props_foliage/urban_vine03.mdl"
+}
+; --- ladder onto building that used to have a pipe ramp to it
+{
+	"model" "*6"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "8049.00 9578.95 -104.60"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*6"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "8049.00 9578.95 120.41"
+	"angles" "0.00 180.00 0.00"
+}
+; --- props for ladder
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "150 150 150"
+	"solid" "0"
+	"origin" "3117 3840 357"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "3117 3840 229"
+}
+; --- improve clipping on a ripped-off fridge door
+{
+	"origin" "3820.4 3480.1 32"
+	"mins" "-57 -57.5 0"
+	"maxs" "0.1 0.1 10.8"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- Four ladders to go over green fence post-RV building
+{
+	"model" "*117"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5960.00 -274.99 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*118"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5000.00 -274.99 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*370"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "4354.00 92.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*371"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "4354.00 860.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+; --- add a prop for a valve ladder that lacks clipbrushes on the sides
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "140 140 140"
+	"solid" "0"
+	"origin" "3768 656 208"
+}
+; --- Ladder on other side of fence with bookcase parkour near sewer drop
+{
+	"model" "*122"
+	"normal.z" "0.00"
+	"normal.y" "-0.25"
+	"normal.x" "0.96"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-12.15 1981.99 -55.84"
+	"angles" "0.00 -15.00 0.00"
+}
+; --- Ladder to get under bridge that blows up from survivor ladder side
+{
+	"model" "*163"
+	"normal.z" "0.32"
+	"normal.y" "0.94"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-368.31 2209.10 1418.07"
+	"angles" "0.00 0.00 19.00"
+}
+; --- Ladder onto shed after bridge that blows up
+{
+	"model" "*163"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "11889.03 2968.42 -25.00"
+	"angles" "0.00 270.00 0.00"
+}
+; --- prop for above ladder
+{
+	"classname" "prop_dynamic"
+	"angles" "0 270 0"
+	"disableshadows" "1"
+	"model" "models/props_urban/fence_post001.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "7038 -4053.5 116"
+}
+; =====================================================
 ; ===============  REMOVE BRIDGE DAMAGE  ==============
 ; =====================================================
 
@@ -369,30 +547,6 @@ add:
 }
 
 ; =====================================================
-; ============= EXPLOIT BLOCKS FOR PROPS =============
-; =====================================================
-add:
-; --- Block survivors from climbing on barrels intended for SI
-{
-	; invisible wall
-	"origin" "4800 7152 350"
-	"mins" "-36 -16.5 -271"
-	"maxs" "36 16.5 271"
-	"initialstate" "1"
-	"BlockType" "1"
-	"classname" "env_physics_blocker"
-}
-{
-	; invisible wall
-	"origin" "3514 6220 411"
-	"mins" "-37 -17 -399"
-	"maxs" "37 17 399"
-	"initialstate" "1"
-	"BlockType" "1"
-	"classname" "env_physics_blocker"
-}
-
-; =====================================================
 ; ================  NUISANCE CHANGES  =================
 ; =====================================================
 filter:
@@ -423,33 +577,6 @@ add:
 	"rendercolor" "255 255 255"
 	"solid" "6"
 	"origin" "4368 -80 9"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "4781 7151 79.9072"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "4819 7151 79.9072"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "4799 7151 127.907"
 }
 {
 	"classname" "prop_dynamic"
@@ -540,33 +667,6 @@ add:
 	"rendercolor" "255 255 255"
 	"solid" "6"
 	"origin" "4330.57 6605.06 2.73278"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3494.51 6219.65 12.9417"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3512.51 6219.65 60.9417"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3532.51 6219.65 12.9417"
 }
 {
 	"classname" "prop_dynamic"
@@ -759,33 +859,6 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"angles" "0 74 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3815.53 1620 0.113297"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 74 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3820.49 1637.3 48.1133"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 74 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3826 1656.53 0.113297"
-}
-{
-	"classname" "prop_dynamic"
 	"angles" "0 167 0"
 	"disableshadows" "1"
 	"model" "models/props_interiors/dresser_tall.mdl"
@@ -819,51 +892,6 @@ add:
 	"rendercolor" "255 255 255"
 	"solid" "6"
 	"origin" "2994 6347 26.9161"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "-23 90 -90.5"
-	"disableshadows" "1"
-	"model" "models/props_mill/pipeset08d_256_001a.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3293.41 3632.25 242.746"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "-23 90 -90.5"
-	"disableshadows" "1"
-	"model" "models/props_mill/pipeset08d_256_001a.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "3293.41 3867.25 342.746"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 179 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "2900.99 -115.762 -5.40567"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 179 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "2882.99 -115.448 42.5943"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 179 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "2863 -115.099 -5.40567"
 }
 {
 	"classname" "prop_dynamic"
@@ -930,24 +958,6 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"angles" "0 0.499999 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "6634.97 -2424.16 -0.247854"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0.499999 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/oil_drum001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "6672.97 -2423.83 -0.247854"
-}
-{
-	"classname" "prop_dynamic"
 	"angles" "0 0.499998 0"
 	"disableshadows" "1"
 	"model" "models/props_urban/oil_drum001.mdl"
@@ -999,4 +1009,54 @@ add:
 	"rendercolor" "255 255 255"
 	"solid" "6"
 	"origin" "4026.17 -194.241 -0.284442"
+}
+; =====================================================
+;
+;     Zonemod Infected Ladder Fixes/Additions
+;
+; =====================================================
+add:
+; -- Add Infected ladder to replace Oil Drums (2)
+{
+	"model" "*363"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2306.21 -2220.53 -7.99"
+	"angles" "0.00 0.00 0.00"
+}
+; -- Add Infected ladder to popular Tank hold out area
+{
+	"model" "*122"
+	"normal.z" "1.00"
+	"normal.y" "0.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1475.93 65.47 -22.15"
+	"angles" "0.00 0.00 0.00"
+}
+; -- Add Infected ladder to end area to allow another angle for an attack. (1)
+{
+	"model" "*42"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-436.92 -889.96 -49.97"
+	"angles" "0.00 0.00 0.00"
+}
+; -- Add Infected ladder to end area to allow another angle for an attack. (2)
+{
+	"model" "*165"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-755.20 -590.03 -127.70"
+	"angles" "0.00 0.00 0.00"
 }
