--- a/cfg/stripper/zonemod/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/zonemod/maps/c5m4_quarter.cfg
@@ -1,4 +1,40 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+add:
+; --- Ladder after billiard alley
+{
+	"model" "*53"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-151.00 3072.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+; --- Ladders post-float to replace a prop ramp
+{
+	"model" "*91"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1633.79 385.94 -43.10"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*91"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2927.91 -541.96 -43.10"
+	"angles" "0.00 270.00 0.00"
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
@@ -300,7 +336,7 @@ add:
 	; invisible block
 	"origin" "-1918 661 503"
 	"mins" "-36 -86 -44.5"
-	"maxs" "36 86 44.5"
+	"maxs" "36 190 44.5"
 	"initialstate" "1"
 	"BlockType" "0"
 	"classname" "env_physics_blocker"
@@ -372,48 +408,12 @@ add:
 add:
 {
 	"classname" "prop_dynamic"
-	"angles" "19 180 0"
-	"disableshadows" "1"
-	"model" "models/props_highway/plywood_02.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "-2398 1059 386.029"
-}
-{
-	"classname" "prop_dynamic"
 	"angles" "0 270 0"
 	"disableshadows" "1"
 	"model" "models/props_highway/plywood_02.mdl"
 	"rendercolor" "255 255 255"
 	"solid" "6"
 	"origin" "1590 -3534 448.244"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "19 180 0"
-	"disableshadows" "1"
-	"model" "models/props_highway/plywood_02.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "-2489 1059 355.029"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "19 180 0"
-	"disableshadows" "1"
-	"model" "models/props_highway/plywood_02.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "-2580 1059 324.029"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "19 180 0"
-	"disableshadows" "1"
-	"model" "models/props_highway/plywood_02.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "-2671 1059 292.029"
 }
 {
 	"classname" "prop_dynamic"
