--- a/cfg/stripper/zonemod/maps/c5m5_bridge.cfg
+++ b/cfg/stripper/zonemod/maps/c5m5_bridge.cfg
@@ -13,6 +13,23 @@ add:
 	"origin" "-3529.04 75.58 378.01"
 	"angles" "0.00 0.00 0.00"
 }
+; --- Add beams on sides under ladders at tank spawn where there is nothing beneath to prevent accidental death
+{
+	"solid" "6"
+	"disableshadows" "1"
+	"origin" "3583 6088 394.5"
+	"angles" "0 0 0"
+	"model" "models/props_highway/bridge_straight_512_side_topbeam.mdl"
+	"classname" "prop_dynamic"
+}
+{
+	"solid" "6"
+	"disableshadows" "1"
+	"origin" "3583 6592 396.5"
+	"angles" "0 0 0"
+	"model" "models/props_highway/bridge_straight_512_side_topbeam.mdl"
+	"classname" "prop_dynamic"
+}
 ; =====================================================
 ; =========  PROMOD GRENADE LAUNCHER REMOVAL  =========
 ; =====================================================
