--- a/cfg/stripper/zonemod/maps/c8m1_apartment.cfg
+++ b/cfg/stripper/zonemod/maps/c8m1_apartment.cfg
@@ -1,8 +1,65 @@
 ; =====================================================
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
-; --- infected ladder to climb up the one-way drop
+; --- infected ladder to get on top of building near saferoom
 add:
+{
+	"model" "*29"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "776.50 3120.00 187.00"
+	"angles" "0.00 270.00 0.00"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "2560 1053.5 288"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "2560 1053.5 416"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "2560 1053.5 544"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "2560 1053.5 672"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "2560 1053.5 800"
+}
+
+; --- infected ladder to climb up the one-way drop
 {
 	"model" "*79"
 	"normal.z" "0.000000"
@@ -21,12 +78,342 @@ add:
 	"solid" "6"
 	"origin" "2085 1398 24"
 }
+;--- ladder to get into second floor of alleyway building directly
+{
+	"model" "*8"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "645.21 -1580.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "2365 2387 223.5"
+}
+;--- weird extra ladder in alley
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_street/police_barricade3.mdl"
+	"solid" "6"
+	"origin" "2221 2289 18"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "-3.5 0 0"
+	"disableshadows" "1"
+	"model" "models/props/de_train/ladderaluminium.mdl"
+	"solid" "0"
+	"origin" "2227 2266 53"
+}
+{
+	"model" "*79"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "0"
+	"classname" "func_simpleladder"
+	"origin" "4275 1092.50 9.06"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*79"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "170.00 3438.50 9.06"
+	"angles" "0.00 270.00 0.00"
+}
+;--- ladders to let SI get behind police fences from the side of the flashing police car
+{
+	"model" "*78"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "2906.00 4096.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*79"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "2346.00 4101.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*80"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1681.99 4087.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+;--- block interior path for survivors
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/desk_metal.mdl"
+	"solid" "6"
+	"origin" "1855 2642 16"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "180 0 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/desk_metal.mdl"
+	"solid" "6"
+	"origin" "1855 2642 80.62"
+}
+{
+	; invisible block above desks
+	"origin" "1838 2599 24"
+	"mins" "0 0 0"
+	"maxs" "38 79 110"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+;--- Don't let survivors onto large white semi trailer
+{
+	"origin" "1017 3609 188"
+	"mins" "-90 -150 -0.1"
+	"maxs" "124 40 100"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+;--- Add a tier 1 weapon spawn inside of the lit-up breakable store window
+{
+	"origin" "1654 3040 17"
+	"weapon_selection" "tier1_any"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"count" "5"
+	"angles" "0 56 90"
+	"classname" "weapon_spawn"
+}
 
+;--- Block sidewalk path with a car
+{
+	"origin" "1684 3215 55"
+	"solid" "6"
+	"model" "models/props_vehicles/taxi_cab.mdl"
+	"disableshadows" "1"
+	"angles" "90 100 0"
+	"classname" "prop_dynamic"
+}
+{
+	"origin" "1684 3215 55"
+	"solid" "6"
+	"model" "models/props_vehicles/police_car_glass.mdl"
+	"disableshadows" "1"
+	"angles" "90 100 0"
+	"classname" "prop_dynamic"
+}
+
+{
+	"origin" "1620 3167 126"
+	"solid" "6"
+	"model" "models/props/cs_office/light_shop.mdl"
+	"disableshadows" "1"
+	"angles" "0 0 0"
+	"classname" "prop_dynamic"
+}
+;--- Block road with truck, forcing survivors to go a longer route
+{
+	"classname" "prop_dynamic"
+	"angles" "0 32 0"
+	"disableshadows" "1"
+	"model" "models/props/de_nuke/truck_nuke.mdl"
+	"solid" "6"
+	"origin" "1326 3458.5 8"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 32 0"
+	"disableshadows" "1"
+	"model" "models/props/de_nuke/truck_nuke_glass.mdl"
+	"solid" "6"
+	"origin" "1326 3458.5 8"
+}
+{
+	"origin" "1403 3341 52"
+	"start_active" "1"
+	"effect_name" "steam_manhole"
+	"angles" "0 146 0"
+	"classname" "info_particle_system"
+}
+{
+	; invisible block 1 so survivors can't jump over truck
+	"origin" "1364 3296 51"
+	"mins" "-0.1 -0.1 -10"
+	"maxs" "86 70 120"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	; invisible block 2 so survivors can't jump over truck
+	"origin" "1320 3354 51"
+	"mins" "-2 -0.1 -10"
+	"maxs" "120 0.1 120"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	; invisible block 3 so survivors can't jump over truck
+	"origin" "1418 3370 115"
+	"mins" "-2 -0.1 -0.1"
+	"maxs" "0.1 40 50"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 45 0"
+	"disableshadows" "1"
+	"model" "models/props/de_nuke/crate_small.mdl"
+	"solid" "6"
+	"origin" "1189 3610 8"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -45 0"
+	"disableshadows" "1"
+	"model" "models/props/de_nuke/crate_small.mdl"
+	"solid" "6"
+	"origin" "1189 3610 72.28"
+}
+{
+	;--- ladder 1 to climb over crates
+	"model" "*79"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1117.00 2964.00 5.00"
+	"angles" "0.00 315.00 0.00"
+}
+{
+	;--- ladder 2 to climb over crates
+	"model" "*79"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "3494.25 4256.25 5.00"
+	"angles" "0.00 135.00 0.00"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 32 0"
+	"disableshadows" "1"
+	"model" "models/props/de_nuke/crate_small.mdl"
+	"solid" "6"
+	"origin" "1270 3555 47"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 122 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/couch.mdl"
+	"solid" "6"
+	"origin" "1360 3466 47"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 122 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/sofa_chair01.mdl"
+	"solid" "6"
+	"origin" "1321 3424 47"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 122 90"
+	"disableshadows" "1"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked.mdl"
+	"solid" "6"
+	"origin" "1490 3274 55"
+}
+;--- ladder to climb onto street light near new car pile-up (lets SI get over easily)
+{
+	"model" "*6"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-491.82 930.39 -42.95"
+	"angles" "0.00 0.00 0.00"
+}
+;---replace some props near the empty lot with ladders instead
+{
+	"model" "*28"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1276.65 -452.66 -55.29"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*28"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "3559.61 8721.90 -108.83"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*85"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5044.09 2035.40 240.02"
+	"angles" "0.00 90.00 0.00"
+}
+
+;"model" "*29"
+;"normal.z" "0.000000"
+;"normal.y" "-1.000000"
+;"normal.x" "0.000000"
+;"team" "2"
+;"classname" "func_simpleladder"
+;"origin" "-622 3275 -112"
 ; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
-; --- set pill cabs to have a max of 2 pills
+; --- set pill cabs to have a max of 1 pill
 
 modify:
 {
@@ -36,7 +423,7 @@ modify:
 	}
 	replace:
 	{
-		"HealthCount" "2"
+		"HealthCount" "1"
 	}
 }
 
@@ -206,15 +593,15 @@ add:
 	"solid" "6"
 	"origin" "896 3971 17"
 }
-{
-	"classname" "prop_dynamic"
-	"angles" "0 221 0"
-	"disableshadows" "1"
-	"model" "models/props/cs_militia/boxes_garage_lower.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "1518.2 4007.36 17.2871"
-}
+;{
+;	"classname" "prop_dynamic"
+;	"angles" "0 221 0"
+;	"disableshadows" "1"
+;	"model" "models/props/cs_militia/boxes_garage_lower.mdl"
+;	"rendercolor" "255 255 255"
+;	"solid" "6"
+;	"origin" "1518.2 4007.36 17.2871"
+;}
 {
 	"classname" "prop_dynamic"
 	"angles" "0 270 0"
@@ -260,15 +647,15 @@ add:
 	"solid" "6"
 	"origin" "768 4208 178.014"
 }
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_fairgrounds/fairgrounds_electric_box001.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "776 4024 -12.4918"
-}
+;{
+;	"classname" "prop_dynamic"
+;	"angles" "0 0 0"
+;	"disableshadows" "1"
+;	"model" "models/props_fairgrounds/fairgrounds_electric_box001.mdl"
+;	"rendercolor" "255 255 255"
+;	"solid" "6"
+;	"origin" "776 4024 -12.4918"
+;}
 {
 	"classname" "prop_dynamic"
 	"angles" "0 0 0"
@@ -333,7 +720,7 @@ add:
 	"classname" "env_physics_blocker"
 }
 {
-	; block other new fire scape
+	; block other new fire escape
 	"origin" "768 4208 178.014"
 	"mins" "0 0 0"
 	"maxs" "87 167 1000"
