--- a/cfg/stripper/zonemod/maps/c8m2_subway.cfg
+++ b/cfg/stripper/zonemod/maps/c8m2_subway.cfg
@@ -1,4 +1,210 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- Let SI into extra window area during event
+add:
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "16322 6478 5.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 180 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "7848 2654 383"
+}
+;--- Replace box pile in tunnel pre-long subway with a ladder
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "-0.90"
+	"normal.x" "-0.42"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-3314.27 4848.39 -618.45"
+	"angles" "0.00 -25.00 0.00"
+}
+;--- Replace rubble pipes in subway tunnel with ladder over rubble
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5982.68 -4568.46 -617.96"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "3825.94 11394.53 -618.96"
+	"angles" "0.00 270.00 0.00"
+}
+;--- Ladders on both sides for SI to get on top of long subway cars, also replaces old promod pipes
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "10842.21 -5574.07 -563.96"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*165"
+	"normal.z" "0.08"
+	"normal.y" "0.70"
+	"normal.x" "0.70"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "16294.45 1029.16 123.29"
+	"angles" "0.00 135.00 -5.00"
+}
+;--- Smooth out tank fight a bit in smoke-filled subway room
+{
+	"model" "*213"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "6500.09 -3310.55 -438.96"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*213"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "6500.09 -3503.85 -438.96"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*214"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5939.96 -3310.37 -406.96"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*214"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5939.06 -3503.69 -406.96"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "-0.34"
+	"normal.x" "0.93"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5347.50 -5323.22 -605.96"
+	"angles" "0.00 70.00 0.00"
+}
+{
+	"model" "*214"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "7775.36 -3505.06 -406.96"
+	"angles" "0.00 90.00 0.00"
+}
+;--- ramp onto sideways subway from fire
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_debris/concrete_debris256barricade001a.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "4665 3840.2 -270"
+}
+;--- improve clipping for new ramp
+{
+	"origin" "4703 3740 -275"
+	"mins" "-172 0 -20"
+	"maxs" "0 103 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "4703 3904 -275"
+	"mins" "-30 -25 -20"
+	"maxs" "88 5 9"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+;--- clip sideways subway to ensure players don't get stuck walking on it
+{
+	"origin" "4657 3931 -234"
+	"mins" "-37 -25 -100"
+	"maxs" "0 0 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "4642 3923 -221"
+	"mins" "-35 0 -100"
+	"maxs" "0 10 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "4543 4063 -216"
+	"mins" "-60 -75 0"
+	"maxs" "0 0 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "4382 4122 -217"
+	"mins" "-60 -75 0"
+	"maxs" "0 0 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "4475 4069 -214"
+	"mins" "-70 0 0"
+	"maxs" "0 6 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
@@ -103,15 +309,6 @@ add:
 add:
 {
 	"classname" "prop_dynamic"
-	"angles" "0 98.5 -90"
-	"disableshadows" "1"
-	"model" "models/props_mill/pipeset08d_256_001a.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "7649 2867 -297.547"
-}
-{
-	"classname" "prop_dynamic"
 	"angles" "0 68.5 0"
 	"disableshadows" "1"
 	"model" "models/props_vehicles/van_glass.mdl"
@@ -136,59 +333,5 @@ add:
 	"rendercolor" "255 255 255"
 	"solid" "6"
 	"origin" "10761 5205 58.8184"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 105 -90"
-	"disableshadows" "1"
-	"model" "models/props_mill/pipeset08d_256_001a.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "2135 3981 -307.091"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 38.5 -90"
-	"disableshadows" "1"
-	"model" "models/props_mill/pipeset08d_256_001a.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "6459 3323 -292.722"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "30.5021 40.4368 -83.4303"
-	"disableshadows" "1"
-	"model" "models/props_mill/pipeset08d_256_001a.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "6410 3325 -291.722"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 53.5 0"
-	"disableshadows" "1"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "5960 4685 -336.966"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 120 0"
-	"disableshadows" "1"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "5996 4660 -336.966"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 61.5 0"
-	"disableshadows" "1"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "5980 4689 -297"
 }
 ; =====================================================
