--- a/cfg/stripper/zonemod/maps/c8m3_sewers.cfg
+++ b/cfg/stripper/zonemod/maps/c8m3_sewers.cfg
@@ -1,4 +1,133 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+add:
+;--- Extra ladders for the first hit (on thin ice for getting removed)
+{
+	"model" "*202"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-168.15 -578.46 275.72"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*56"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "745.46 -2305.81 550.10"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Guaranteed ammo spawn
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "12512 5455 196"
+	"spawnflags" "2"
+	"solid" "6"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"disableshadows" "1"
+	"count" "5"
+	"angles" "0 0 0"
+}
+;--- Ladders to prevent getting stuck in road
+{
+	"model" "*22"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-544.13 -1055.31 -482.96"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*56"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "147.66 -897.46 6.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*202"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-735.44 541.47 -154.29"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Extra ladders for easier access to the road near the burger tank
+{
+	"model" "*39"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1525.16 1320.38 -416.96"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*39"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1364.06 -170.21 -421.96"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Ladder alternative to jumping onto burger tank roof rim to the AC units
+{
+	"model" "*54"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2819.19 -2036.78 510.31"
+	"angles" "0.00 0.00 0.00"
+}
+;---Replace pipe jumps with infected ladder above ladder lift
+{
+	"model" "*56"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "2177.44 1310.70 302.39"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "12703.94 7510.70 462"
+}
+
+;--- Block stuck spot on top of warehouse for special infected
+{
+	"origin" "11033 7737 486"
+	"mins" "-15 -100 0"
+	"maxs" "0 600 40"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
@@ -67,31 +196,6 @@ filter:
 ; ================  EXPLOITS BLOCKED  =================
 ; =====================================================
 
-;add:
-; --- add fake warehousedoor to prevent GL opening the path
-;{
-;    ; extra prop blocking door
-;    "solid" "6"
-;    "origin" "10994 7520 10"
-;    "angles" "0 180 0"
-;    "targetname" "door_sliding_fake"
-;   "disableshadows" "1"
-;    "model" "models/props_mill/rollup_door01.mdl"
-;    "classname" "prop_dynamic"
-;}
-; <remove fake door on button press>
-;modify:
-;{
-;    match:
-;    {
-;        ; button, now also removes fake door
-;        "hammerid" "3901541"
-;    }
-;    insert:
-;    {
-;        "OnPressed" "door_sliding_fakeKill0-1"
-;    }
-;}
 add:
 ; --- block gas station roof exploit
 {
@@ -352,15 +456,6 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "12685 7525 318"
-}
-{
-	"classname" "prop_dynamic"
 	"angles" "0 180 0"
 	"disableshadows" "1"
 	"model" "models/props_mill/pipeset08d_256_001a.mdl"
@@ -412,32 +507,5 @@ add:
 	"rendercolor" "255 255 255"
 	"solid" "6"
 	"origin" "12357 8704 -466.007"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_rooftop/chimneypipe_cluster02a.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "12685 7552 304"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "12685 7525 350"
-}
-{
-	"classname" "prop_dynamic"
-	"angles" "0 0 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/chimney002.mdl"
-	"rendercolor" "255 255 255"
-	"solid" "6"
-	"origin" "12685 7525 382"
 }
 ; =====================================================
