--- a/cfg/stripper/zonemod/maps/c8m5_rooftop.cfg
+++ b/cfg/stripper/zonemod/maps/c8m5_rooftop.cfg
@@ -1,4 +1,77 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- replace infected helipad promod pipe with a ladder
+add:
+{
+	;--- infected ladder for visibility
+	"model" "*64"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+    	"normal.x" "0.00"
+    	"team" "2"
+    	"classname" "func_simpleladder"
+    	"origin" "1410.00 2022.00 -378.67"
+    	"angles" "0.00 0.00 5.00"
+}
+{
+	;--- invisible "survivor" ladder to make the ladder function well
+	"model" "*5"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1415.00 15665.00 30.00"
+	"angles" "0.00 270.00 0.00"
+}
+;--- marginally slow down survivors with a handtruck in their way
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props/cs_assault/washer_box.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "6562 8553 5760"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 270 0"
+	"disableshadows" "1"
+	"model" "models/props/cs_assault/washer_box.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "6562 8507 5760"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -87 15"
+	"disableshadows" "1"
+	"model" ""model" "models/props_highway/plywood_02.mdl""
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "6496 8472 5761"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 180"
+	"disableshadows" "1"
+	"model" "models/props_pipes/pipeset32d_512_001a.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "6636 8702 5890"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "90 2 0"
+	"disableshadows" "1"
+	"model" "models/props/cs_office/cardboard_box03.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "6598 8550 5767.5"
+}
+; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
 filter:
@@ -112,62 +185,6 @@ add:
 	"model" "models/props_rooftop/gutter_pipe_128.mdl"
 	"rendercolor" "255 255 255"
 	"solid" "0"
-	"origin" "7288 8959 6205.9"
+	"origin" "7288 8960 6205.9"
 	"rendercolor" "255 255 0"
-}
-{
-	"origin" "7288 8960 6139"
-	"mins" "-6 -.5 -67"
-	"maxs" "6 .5 67"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "7288 8959 6130"
-	"mins" "-6 -.5 -58"
-	"maxs" "6 .5 58"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "7288 8958 6121"
-	"mins" "-6 -.5 -49"
-	"maxs" "6 .5 49"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "7288 8957 6112"
-	"mins" "-6 -.5 -40"
-	"maxs" "6 .5 40"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "7288 8956 6103"
-	"mins" "-6 -.5 -31"
-	"maxs" "6 .5 31"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "7288 8955 6094"
-	"mins" "-6 -.5 -22"
-	"maxs" "6 .5 22"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "7288 8954 6085"
-	"mins" "-6 -.5 -13"
-	"maxs" "6 .5 13"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
 }
