--- a/cfg/stripper/zonemod/maps/dprm1_milltown_a.cfg
+++ b/cfg/stripper/zonemod/maps/dprm1_milltown_a.cfg
@@ -1,43 +1,13 @@
 ; =====================================================
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
-; --- remove broken alarm car, replace with a new car
-filter:
-{
-	"classname" "prop_car_alarm"
-}
-{
-	"hammerid" "106333"
-}
-{
-	"hammerid" "106298"
-}
-add:
-{
-	"origin" "-3844 5890 100.587"
-	"solid" "6"
-	"parentname" "replacementcar"
-	"model" "models/props_vehicles/cara_95sedan_glass.mdl"
-	"disableshadows" "1"
-	"angles" "0 91.5 0"
-	"classname" "prop_dynamic"
-}
-{
-	"origin" "-3844 5890 100.587"
-	"solid" "6"
-	"targetname" "replacementcar"
-	"spawnflags" "256"
-	"model" "models/props_vehicles/cara_95sedan.mdl"
-	"angles" "0 91.5 0"
-	"disableshadows" "1"
-	"classname" "prop_physics"
-}
-; --- Fix an infected ladder above Self Storage to actually work 
+;--- Fixes infected two ladders on the map by modifying one and adding another (to fix a broken one)
+;--- Ladder above "Self Storage" (-5801.00,8155.98,379.69)
 modify:
 {
 	match:
 	{
-		"hammerid" "6996"
+		"hammerid" "19283"
 	}
 	replace:
 	{
@@ -46,10 +16,23 @@ modify:
 		"normal.x" "-1.000000"
 	}
 }
+;--- Ladder near end saferoom, close to ladder choke truck (4346.00,1756.99,181.56)
+add:
+{
+	"model" "*191"
+	"normal.z" "-0.50"
+	"normal.y" "0.00"
+	"normal.x" "0.86"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "9905.00 2248.00 -88.00"
+	"angles" "0.00 90.00 0.00"
+}
+; ================  Map 5 Consistency  =================
 ; --- extra QoL ladder around fence that appears when finale starts
 add:
 {
-	"model" "*50"
+	"model" "*109"
 	"normal.z" "0.00"
 	"normal.y" "0.00"
 	"normal.x" "1.00"
@@ -60,7 +43,7 @@ add:
 }
 ; --- add ladder to escape Save 4 Less through the window
 {	
-	"model" "*69"
+	"model" "*128"
 	"normal.z" "0.00"
 	"normal.y" "1.00"
 	"normal.x" "-0.00"
@@ -72,10 +55,10 @@ add:
 ; --- remove two glass pieces that common normally break, but blocks the new ladder
 filter:
 {
-	"hammerid" "5933"
+	"hammerid" "17832"
 }
 {
-	"hammerid" "5936"
+	"hammerid" "17835"
 }
 ; --- light prop for above ladder
 add:
@@ -85,6 +68,7 @@ add:
 	"model" "models/props/cs_office/light_shop.mdl"
 	"disableshadows" "1"
 	"angles" "0 0 0"
+	"rendercolor" "150 150 150"
 	"classname" "prop_dynamic"
 	"skin" "1"
 }
@@ -94,6 +78,7 @@ add:
 	"model" "models/props/cs_office/light_shop.mdl"
 	"disableshadows" "1"
 	"angles" "0 0 0"
+	"rendercolor" "150 150 150"
 	"classname" "prop_dynamic"
 	"skin" "1"
 }
@@ -103,6 +88,7 @@ add:
 	"model" "models/props/cs_office/light_shop.mdl"
 	"disableshadows" "1"
 	"angles" "0 0 0"
+	"rendercolor" "150 150 150"
 	"classname" "prop_dynamic"
 	"skin" "1"
 }
@@ -158,75 +144,12 @@ add:
 	"angles" "0 90 0"
 	"classname" "prop_dynamic_override"
 }
-; --- Extra Tank spawn in first garage
-; --- hide fence prop on side until button is pressed
-modify:
-{
-	match:
-	{
-		"hammerid" "2380"
-	}
-	replace:
-	{
-		"StartDisabled" "1"
-	}
-}
-add:
-{
-	"targetname" "extratankprop"
-	"origin" "-4773 5850 91"
-	"solid" "6"
-	"model" "models/props_urban/fence_gate001_256.mdl"
-	"disableshadows" "1"
-	"angles" "0 180 0"
-	"classname" "prop_dynamic"
-}
-{
-	"targetname" "extratankprop"
-	"origin" "-4809 6072 111.796"
-	"solid" "6"
-	"model" "models/props_doors/roll-up_door_full.mdl"
-	"disableshadows" "1"
-	"angles" "0 180 0"
-	"classname" "prop_dynamic"
-}
-; --- button to spawn tank
-{
-	"model" "*86"
-	"wait" "-1"
-	"targetname" "button_newtank"
-	"speed" "5"
-	"spawnflags" "1024"
-	"rendermode" "10"
-	"rendercolor" "255 255 255"
-	"origin" "-4500 6274 165"
-	"classname" "func_button"
-	"OnPressed" "stadium_entrance_doorprop_beforeEnable0.1-1"
-	"OnPressed" "extratankpropKill0.1-1"
-	"OnPressed" "button_newtankSetAnimationTURN_ON01"
-	"OnPressed" "button_newtankSetAnimationidleoff0.21"
-	"OnPressed" "!activatorSpeakresponseconceptc4m2_elevator_top_button0-1"
-	"OnPressed" "zombie_tankSpawnZombie0-1"
-}
 {
 	"origin" "-4500 6274 174"
-	"targetname" "button_newtank"
 	"solid" "6"
-	"rendercolor" "255 255 255"
 	"model" "models/props_mill/freightelevatorbutton01.mdl"
-	"MinAnimTime" "5"
-	"MaxAnimTime" "10"
-	"DefaultAnim" "idleon"
 	"angles" "0 0 0"
 	"classname" "prop_dynamic"
-}
-{
-	"targetname" "zombie_tank"
-	"origin" "-6786 8263 100"
-	"population" "tank"
-	"offer_tank" "1"
-	"angles" "0 0 0"
-	"classname" "info_zombie_spawn"
 }
 ; --- clip for button
 {
@@ -240,14 +163,14 @@ add:
 ; --- remove windows that were only breakable by tank, would be a boring chore for each tank to do if not removed
 filter:
 {
-	"hammerid" "7753"
+	"hammerid" "19573"
 }
 {
-	"hammerid" "7756"
+	"hammerid" "19576"
 }
 {
-	"hammerid" "7759"
+	"hammerid" "19579"
 }
 {
-	"hammerid" "7762"
+	"hammerid" "19582"
 }
