--- a/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium1_apartment.cfg
@@ -11,6 +11,23 @@ add:
 	"BlockType" "1"
 	"classname" "env_player_blocker"
 }
+;--- Fix survivors getting punched onto bus and porta potty by tank
+{
+	"origin" "1302 1331 -3656"
+	"mins" "-20 -20 -25"
+	"maxs" "600 200 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "1204 1336 -3716"
+	"mins" "-15 -20 -0.1"
+	"maxs" "58 75 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
 filter:
 {
 	;Zombie spawn trigger
