--- a/cfg/stripper/zonemod/maps/l4d2_stadium4_city2.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium4_city2.cfg
@@ -1,13 +1,72 @@
 ; =====================================================
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
-;--- easy access to spot in sewer room
+; --- remove nuisance pallets that block SI spawns near very beginning
+filter:
+{
+	"hammerid" "2413144"
+}
+{
+	"hammerid" "2413136"
+}
+{
+	"hammerid" "2413140"
+}
+; --- easy access for SI to get to the opposite ledge in the sewer room
 add:
 {
-	"classname" "prop_dynamic"
-	"angles" "0 90 0"
-	"disableshadows" "1"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"solid" "6"
-	"origin" "-480 295 -341.6"
+	"model" "*327"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1425.53 715.31 -184.97"
+	"angles" "0.00 180.00 0.00"
+}
+; --- Fix incredibly unlikely stuck spots behind fences after the theater
+add:
+{
+	"model" "*43"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "132.00 -537.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*42"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-11519.03 868.76 -6.28"
+	"angles" "0.00 270.00 0.00"
+}
+; --- fix end train killing survivors if they are on the front end of the train by moving kill plane
+modify:
+{
+	match:
+	{
+		"hammerid" "1268129"
+	}
+	replace:
+	{
+		"origin" "-9785 6902 -273.5"
+	}
+}
+; --- modify a seldom-used ladder after the theater so that you can climb up the building without running into the rim
+modify:
+{
+	match:
+	{
+		"hammerid" "1267956"
+	}
+	insert:
+	{
+		"origin" "0.00 31.00 0.00"
+	}
 }
