--- a/cfg/stripper/zonemod/maps/l4d2_stadium5_stadium.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_stadium5_stadium.cfg
@@ -1,7 +1,7 @@
 ; =====================================================
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
-;--- stop SI from getting stuck in the bushes above the saferoom
+; --- Stop SI from getting stuck in the bushes above the saferoom
 add:
 {
 	"origin" "6385 -4744 381"
@@ -27,7 +27,81 @@ add:
 	"BlockType" "3"
 	"classname" "env_physics_blocker"
 }
-
+; --- Extra ladder on bushes for SI at start
+{
+	"model" "*407"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1166.00 0.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Remove Pill spawns throughout the map and instead spawn 4 static pills at the ammo pile in the field
+filter:
+{
+	"classname" "weapon_item_spawn"
+}
+add:
+{
+	"classname" "weapon_pain_pills_spawn"
+	"spawnflags" "2"
+	"origin" "-411 -3803 105"
+	"angles" "0 172 0"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+	"spawnflags" "2"
+	"origin" "-377 -3847 105"
+	"angles" "0 145 0"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+	"spawnflags" "2"
+	"origin" "-387 -3820 105"
+	"angles" "0 180 0"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+	"spawnflags" "2"
+	"origin" "-403 -3900 105"
+	"angles" "0 212 0"
+}
+; --- make a ladder a bit easier to climb, and more obvious
+modify:
+{
+	match:
+	{
+		"hammerid" "938936"
+	}
+	insert:
+	{
+		"origin" "8.00 2.00 0.00"
+	}
+}
+; --- prop for ladder
+add:
+{
+	"classname" "prop_dynamic"
+	"angles" "0 105 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "150 150 150"
+	"solid" "0"
+	"origin" "-671 -4801 232"
+}
+; --- extra ladder on white wall that blows up for tanks that spawn in front of it
+{
+	"model" "*127"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-3034.99 -7724.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
 ; =====================================================
 ; =================== Suicide Blitz 5 =================
 ; =====================================================
