--- a/cfg/stripper/zonemod/maps/l4d2_vs_stadium2_riverwalk.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_vs_stadium2_riverwalk.cfg
@@ -1,6 +1,25 @@
 ; =====================================================
 ; ================  RL4D2L ADDITIONS  =================
 ; =====================================================
+;--- Fix surf spot for infected on roof of first hit
+add:
+{
+	"origin" "-1795 1855 685"
+	"mins" "-570 -0.1 -0.1"
+	"maxs" "0.1 75 0.1"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+;--- Make one of the roof rims solid that isn't for some reason
+{
+	"origin" "-1073 1548 560"
+	"mins" "-14 -0.1 -0.1"
+	"maxs" "0.1 350 0"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
 ;--- Remove 4 pills at end safe house
 filter:
 {
@@ -15,6 +34,93 @@ filter:
 {
 	"hammerid" "5195063"
 }
+;--- Fixes a broken ladder right before water section
+modify:
+{
+	match:
+	{
+		"hammerid" "3500324"
+	}
+	replace:
+	{
+		"normal.x" "-1.000000"
+	}
+}
+;--- Ladder to escape bush corner before the water
+add:
+{
+	"model" "*110"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-547.00 -239.00 7.00"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Ladder to escape bush circle near lit-street lamp along the water before the porta potties
+{
+	"model" "*101"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-740.46 -516.23 -12.00"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Block survivors from getting punched onto a balcony
+{
+	"origin" "1543.63 7483.59 -20"
+	"mins" "-0.1 -0.1 -0.1"
+	"maxs" "500 200 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+;--- Let SI get onto bridge faster after the boat (useful for retaining rage as tank)
+{
+	"model" "*218"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1794.94 2776.98 -421.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*101"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1530.18 2236.81 88.57"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Additional ladder options on bridge, not too useful
+{
+	"model" "*113"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "0.00 1897.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*102"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "972.29 1497.98 14.00"
+	"angles" "0.00 0.00 0.00"
+}
+;=====================================================
 add:
 ;---- Add Exploding Barrel at Event
 {
