--- a/cfg/stripper/zonemod/maps/uz_crash.cfg
+++ b/cfg/stripper/zonemod/maps/uz_crash.cfg
@@ -1,5 +1,393 @@
 ; Undead Zone 1
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- remove orange color correction
+filter:
+{
+	"hammerid" "492371"
+}
+;--- block survivors from getting punched onto fence and tent at beginning
+add:
+{
+	"origin" "2239 299 250"
+	"mins" "-18 -0.1 -0.1"
+	"maxs" "0.1 1000 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "2207 896 260"
+	"mins" "-248 -383 -12"
+	"maxs" "0.1 0.1 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "2311 56 319"
+	"mins" "-0.1 -0.1 -6"
+	"maxs" "100 400 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- Block survivors jumping on top of fences near truck and water
+{
+	"origin" "959 302 174"
+	"mins" "-0.1 -0.1 -0.1"
+	"maxs" "4 660 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- Block survivors from jumping onto forklifts/boxes at gate event
+{
+	"origin" "3372 1440 326"
+	"mins" "-10 -38 -0.1"
+	"maxs" "0.1 0.1 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "3747 1647 326"
+	"mins" "0 0 -0.1"
+	"maxs" "40 13 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "3440 2033 296"
+	"mins" "-0.1 -0.1 -200"
+	"maxs" "110 0.1 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "3697 2014 298"
+	"mins" "-146 -0.1 -200"
+	"maxs" "250 0.1 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "3272 949 300"
+	"mins" "-200 -0.1 -200"
+	"maxs" "0 50 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "3944 1819 300"
+	"mins" "0 -0.1 -200"
+	"maxs" "50 71 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+;--- ladder fixing
+modify:
+{
+	match:
+	{
+		"hammerid" "510151"
+	}
+	insert:
+	{
+		"origin" "6.00 -4.00 46.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "405545"
+	}
+	replace:
+	{
+		"normal.z" "0.00"
+    		"normal.y" "0.00"
+    		"normal.x" "1.00"
+	}
+	insert:
+	{
+		"origin" "0.00 0.00 23.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "436113"
+	}
+	insert:
+	{
+		"origin" "0.00 0.00 15.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "405579"
+	}
+	insert:
+	{
+		"origin" "0.00 0.00 65.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "394202"
+	}
+	insert:
+	{
+		"origin" "0.00 0.00 4.00"
+	}
+}
 
+filter:
+; --- broken ladders that need entire replacement
+{
+	"hammerid" "435997"
+}
+{
+	"hammerid" "435946"
+}
+add:
+; --- make one cliff face easier to navigate
+{
+	"origin" "2348 184 285"
+	"mins" "0 -0.1 -100"
+	"maxs" "40 400 5"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+; --- invisible block to make one ladder actually usable
+{
+	"origin" "1552 -85 449"
+	"mins" "-36 -0.1 -0.1"
+	"maxs" "0.1 96 12"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+; --- Block SI stuck spot between bridge and cliff
+{
+	"origin" "2351 -1553 82"
+	"mins" "-120 -560 -150"
+	"maxs" "0 0 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- prop to make a ladder more visible
+{
+	"classname" "prop_dynamic"
+	"origin" "3037 50 116"
+	"angles" "0 -25 0"
+	"solid" "0"
+	"rendercolor" "255 255 255"
+	"model" "models/props_foliage/urban_vine04.mdl"
+}
+; --- Walk onto truck from box easier at event
+{
+	"origin" "3758 1086 326"
+	"mins" "-15 -0.1 -0.1"
+	"maxs" "0.1 65 0.1"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+; --- Block SI stuck spot between a box and a cliff
+{
+	"origin" "3926 1192 318"
+	"mins" "0 -90 -150"
+	"maxs" "120 0 2.02"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- Extra ladders
+{
+	;---Onto back of saferoom
+	"model" "*74"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "4005.08 2821.03 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	;---Another ladder onto a shaded hill
+	"model" "*75"
+	"normal.z" "0.41"
+	"normal.y" "0.91"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "4994.64 2143.74 -13.16"
+	"angles" "0.00 270.00 0.00"
+}
+{
+	;---Ladder to climb onto box panel near event button
+	"model" "*77"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1614.36 4986.81 -4.21"
+	"angles" "0.00 270.00 0.00"
+}
+{
+	;---Extra ladder to climb on event warehouse
+	"model" "*98"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1663.96 5482.23 0.00"
+	"angles" "0.00 270.00 0.00"
+}
+{
+	;---Ladder to climb from event warehouse to hill
+	"model" "*94"
+	"normal.z" "0.35"
+	"normal.y" "0.00"
+	"normal.x" "0.93"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5694.53 2334.97 302.38"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	;---Easier to get on one hill
+	"model" "*77"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "166.16 -283.61 244.66"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	;---Another hill ladder
+	"model" "*77"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-32.18 -1510.41 256.15"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	;---Escape a prop corner easier
+	"model" "*55"
+	"normal.z" "0.00"
+	"normal.y" "-0.98"
+	"normal.x" "-0.17"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "4466.13 -2955.27 -71.90"
+	"angles" "0.00 80.00 0.00"
+}
+{
+	;---Ladder for tank if it spawns before cave gate is opened
+	"model" "*60"
+	"normal.z" "0.08"
+	"normal.y" "0.00"
+	"normal.x" "0.99"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "14871.13 -985.99 453.71"
+	"angles" "5.00 180.00 0.00"
+}
+; --- visual prop for above ladder
+{
+	"classname" "prop_dynamic"
+	"origin" "7840 -603 -60"
+	"angles" "0 180 0"
+	"solid" "0
+	"rendercolor" "150 150 150"
+	"model" "models/from_kit/triplerock_b.mdl"
+	"disableshadows" "1"
+}
+{
+	;---Replacement cave ladder 1
+	"model" "*79"
+	"normal.z" "0.40"
+	"normal.y" "0.91"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "11826.45 -4102.72 -626.70"
+	"angles" "0.00 120.00 0.00"
+}
+{
+	;---Replacement cave ladder 2
+	"model" "*94"
+	"normal.z" "0.35"
+	"normal.y" "-0.93"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "10615.90 -3196.50 -613.69"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	;---Extra cave ladder 1
+	"model" "*79"
+	"normal.z" "0.40"
+	"normal.y" "0.91"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "12540.22 -4119.82 -627.13"
+	"angles" "0.00 120.00 0.00"
+}
+{
+	;---Extra cave ladder 2
+	"model" "*94"
+	"normal.z" "0.35"
+	"normal.y" "-0.93"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "11255.90 -3111.54 -618.57"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	;---Extra cave ladder 3
+	"model" "*68"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1512.96 -1078.40 -65.90"
+	"angles" "0.00 0.00 0.00"
+}
+; --- Extra prop for SI spawns at end saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "11560 -1141 -352"
+	"angles" "0 0 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props/de_nuke/crate_small.mdl"
+}
+; =====================================================
 ; --- Hide error prop.
 add:
 {
