--- a/cfg/stripper/zonemod/maps/uz_escape.cfg
+++ b/cfg/stripper/zonemod/maps/uz_escape.cfg
@@ -1,78 +1,468 @@
 ; Undead Zone 5
-
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- remove orange color correction
+filter:
+{
+	"hammerid" "261308"
+}
+add:
+; --- pistol spawn in saferoom
+{
+	"origin" "-3211 573 54.9795"
+	"spawnflags" "6"
+	"solid" "6"
+	"count" "10"
+	"angles" "0 45 90"
+	"classname" "weapon_pistol_spawn"
+}
+; --- clip rocks at very beginning
+{
+	"origin" "-3655 62 45"
+	"mins" "-245 -0.1 -40"
+	"maxs" "0.1 130 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-3898 343 45"
+	"mins" "-94 -196 -40"
+	"maxs" "0.1 0.1 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- extra ladder to get on cliff faster for first hit and tank
+{
+	"model" "*120"
+	"normal.z" "0.17"
+	"normal.y" "-0.98"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1547.66 -334.45 327.58"
+	"angles" "0.00 0.00 -10.00"
+}
+; --- one set of ladders to cross over the first fence
+{
+	"model" "*89"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "2641.93 -584.75 -115.98"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*89"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-13026.06 1399.24 -115.98"
+	"angles" "0.00 180.00 0.00"
+}
+; --- fix some more stuck spots
+{
+	"model" "*9"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "2911.26 -547.67 -22.87"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*110"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "3364.09 -1515.58 -56.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*110"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "3140.35 -1957.77 -90.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*120"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-231.19 -1739.73 -314.82"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*120"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-84.95 -2192.69 -299.86"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"origin" "-5424 -394 131"
+	"mins" "-0.1 -0.1 -0.1"
+	"maxs" "60 470 0.1"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-8054 1605 180"
+	"mins" "-0.1 -0.1 -180"
+	"maxs" "270 126 0.1"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+{
+	"model" "*84"
+	"normal.z" "0.50"
+	"normal.y" "0.61"
+	"normal.x" "0.61"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-473.68 422.24 -9.35"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*120"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1554.33 -1896.51 -163.82"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*82"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "818.53 2620.80 -7.99"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "168.00 0.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*92"
+	"normal.z" "0.42"
+	"normal.y" "-0.90"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "168.00 0.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-7446.79 -7716.92 1.40"
+	"angles" "0.00 270.00 0.00"
+}
+;--- give tank a little extra ground so he doesn't fall into the pit if he spawns behind building
+{
+	"origin" "-5955 -615 0"
+	"mins" "-0.1 -0.1 -0.1"
+	"maxs" "500 100 0.1"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+;--- block glitch spot on top of forklift
+{
+	"origin" "-5710 293 147"
+	"mins" "-0.1 -80 -0.1"
+	"maxs" "100 35 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+;--- make it easier to walk through windows in building near forklift
+{
+	"origin" "-5845 775 23.43"
+	"mins" "-0.1 -0.1 -0.1"
+	"maxs" "15 335 12"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-6520 775 23.43"
+	"mins" "-0.1 -0.1 -0.1"
+	"maxs" "15 335 12"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+;--- vine prop to make a ladder more visible
+{
+	"classname" "prop_dynamic"
+	"origin" "-7482 -372 0"
+	"angles" "0 5 0"
+	"solid" "0"
+	"rendercolor" "255 255 255"
+	"model" "models/props_foliage/urban_vine04.mdl"
+}
+;--- fix ladders so that they actually climb on the correct side
+modify:
+{
+	match:
+	{
+		"hammerid" "285371"
+	}
+	replace:
+	{	
+		"normal.y" "0.00"
+		"normal.x" "-1.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "325256"
+	}
+	replace:
+	{	
+		"normal.y" "0.00"
+		"normal.x" "-1.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "325361"
+	}
+	replace:
+	{	
+		"normal.y" "0.00"
+		"normal.x" "-1.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "325377"
+	}
+	replace:
+	{	
+		"normal.y" "0.00"
+		"normal.x" "-1.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "325397"
+	}
+	replace:
+	{	
+		"normal.y" "0.00"
+		"normal.x" "-1.00"
+	}
+}
+; --- ladder to get onto burning helicopter from behind
+add:
+{
+	"model" "*100"
+	"normal.z" "0.42"
+	"normal.y" "-0.00"
+	"normal.x" "-0.90"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-7572.82 7436.83 -33.96"
+	"angles" "0.00 90.00 0.00"
+}
+; --- extra ladders to get on very top of pills area cliff
+{
+	"model" "*103"
+	"normal.z" "0.25"
+	"normal.y" "0.96"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "250.06 -684.25 380.89"
+	"angles" "0.00 0.00 15.00"
+}
+{
+	"model" "*121"
+	"normal.z" "0.08"
+	"normal.y" "0.99"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-14665.92 40.52 96.97"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*93"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "722.68 -2534.03 508.23"
+	"angles" "0.00 0.00 0.00"
+}
+; --- extra ladders and ramps in holdout area near pills
+{
+	"model" "*80"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1973.46 -27.43 27.97"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*81"
+	"normal.z" "0.00"
+	"normal.y" "0.69"
+	"normal.x" "0.71"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-16383.37 -1865.71 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*83"
+	"normal.z" "0.00"
+	"normal.y" "-0.86"
+	"normal.x" "0.50"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-13638.84 -5364.85 0.00"
+	"angles" "0.00 210.00 0.00"
+}
+{
+	"model" "*83"
+	"normal.z" "0.00"
+	"normal.y" "0.86"
+	"normal.x" "-0.50"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1601.54 4263.93 0.00"
+	"angles" "0.00 30.00 0.00"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 -45"
+	"disableshadows" "1"
+	"model" "models/props_swamp/plank001b_192.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-8333 -668 71"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 -45"
+	"disableshadows" "1"
+	"model" "models/props_swamp/plank001b_192.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-8333 -801 71"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 180 -45"
+	"disableshadows" "1"
+	"model" "models/props_swamp/plank001b_192.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-7806 -1241 71"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 180 -45"
+	"disableshadows" "1"
+	"model" "models/props_swamp/plank001b_192.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-7496 -1241 71"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 180 -45"
+	"disableshadows" "1"
+	"model" "models/props_swamp/plank001b_192.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-7176 -1337 75"
+}
+; --- block survivors from seeing over fence on rock
+{
+	"origin" "-8046 -538 45"
+	"mins" "-300 -0.1 -45"
+	"maxs" "0.1 113 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-8102 -489 45"
+	"mins" "-285 -0.1 -45"
+	"maxs" "0.1 153 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-8370 -275 45"
+	"mins" "-124 -0.1 -45"
+	"maxs" "0.1 189 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- block a stuck spot for both teams
+{
+	"origin" "-8410 -229 45"
+	"mins" "-80 -0.1 -45"
+	"maxs" "0.1 150 100"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; =====================================================
 ; --- Remove color correction.
 filter:
 {
 	"hammerid" "134671"
 }
-
-; --- Add a way for tank to get out of stuck spots.
-add:
-{
-	"classname" "prop_dynamic"
-	"origin" "-5590 -418 2.53218"
-	"angles" "0 0 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props/de_nuke/crate_small.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-5507 -431 2.2668"
-	"angles" "0 0 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props/de_nuke/crate_extralarge.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-5576 -404 63.0785"
-	"angles" "0 0 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props_crates/static_crate_40.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-5641 -405 5.4158"
-	"angles" "0 0 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props_crates/static_crate_40.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-7589 -3.55656 1"
-	"angles" "0 0 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props_crates/static_crate_40.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-7571 -11 40.027"
-	"angles" "0 0 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props_crates/static_crate_40.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-7563.61 -41 1"
-	"angles" "0 21 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props_crates/static_crate_40.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-7563 37 1.00002"
-	"angles" "0 180 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props_unique/processor_tank.mdl"
-}
-
 ; --- Add ammo pile at hangar.
 add:
 {
