--- a/cfg/stripper/zonemod/maps/uz_town.cfg
+++ b/cfg/stripper/zonemod/maps/uz_town.cfg
@@ -1,4 +1,256 @@
 ; Undead Zone 2
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- remove orange color correction
+filter:
+{
+	"hammerid" "2148133"
+}
+; --- let SI climb up one-way drop at beginning of level
+add:
+{
+	"model" "*165"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2326.52 4441.36 -33.00"
+	"angles" "0.00 180.00 0.00"
+}
+; --- Extra ladder to climb onto jail
+{
+	"model" "*179"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-3826.03 36.66 -24.00"
+	"angles" "0.00 90.00 0.00"
+}
+; --- filter indestructible door at gas station
+filter:
+{
+	"hammerid" "615928"
+}
+; --- Fix SI stuck spots by adding ladders to escape them
+add:
+{
+	"model" "*161"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1299.78 3917.96 -152.04"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*162"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2094.52 3993.70 -120.33"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*193"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2710.00 3971.00 -212.00"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*176"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "555.00 -1.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*179"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-450.00 -14.00 0.00"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*188"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1547.96 -5233.39 0.00"
+	"angles" "0.00 270.00 0.00"
+}
+; --- fix survivors getting into an unintended room after crossing the overpass
+{
+	"origin" "-2096 1607 375"
+	"mins" "-0.1 -11 -0.1"
+	"maxs" "180 0 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- fix survivors jumping from a window into a stuck spot at the one-way in the building
+{
+	"origin" "-3514 834 394"
+	"mins" "-30 0 -0.1"
+	"maxs" "0 175 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- Block places where common can't path near gas station as well as out of maps
+{
+	"origin" "-1876 -834 277"
+	"mins" "-71 0 -100"
+	"maxs" "0 16 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-288 -1256 250"
+	"mins" "0 -52 -100"
+	"maxs" "100 0 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-737 -1586 333"
+	"mins" "-30 0 0"
+	"maxs" "0 268 100"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2223 -923 347"
+	"mins" "-23 -109 0"
+	"maxs" "0 0 100"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2094 -1165.5 270"
+	"mins" "-42 -35 -100"
+	"maxs" "6 5 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2131 -1142 270"
+	"mins" "-109 -66 -100"
+	"maxs" "0.1 11 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2155 -1472 367"
+	"mins" "-21 0 -100"
+	"maxs" "0 12 150"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-1087 -1728 350"
+	"mins" "-280 0 -200"
+	"maxs" "0 22 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- stop survivors from being punched by a tank over a fence after the overpass
+{
+	"origin" "-2257 2427 350"
+	"mins" "0 0 0"
+	"maxs" "145 20 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- stop survivors from being punched by a tank onto a roof near gas station
+{
+	"origin" "-507 -324 404"
+	"mins" "-582 0 0"
+	"maxs" "0 18 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- stop survivors from being punched by a tank over a fence near gas station
+{
+	"origin" "-1065 -1600 350"
+	"mins" "-0.1 -130 0"
+	"maxs" "870 0 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- stop survivors from getting punched over a fence near jail
+{
+	"origin" "-2991 -1728 350"
+	"mins" "-17 -140 0"
+	"maxs" "0 0 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- stop survivors from getting punched over a chainlink fence before the pool hall
+{
+	"origin" "222 -2234 355"
+	"mins" "0 0 0"
+	"maxs" "70 500 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- prop to justify a jesus spot fix
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 0"
+	"disableshadows" "1"
+	"model" "models/props_crates/static_crate_40.mdl"
+	"solid" "6"
+	"origin" "-2112 -1183 258"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2168 -1164 224"
+	"angles" "0 0 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props/de_nuke/crate_small.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2168 -1164 286.5"
+	"angles" "0 90 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props/de_nuke/crate_small.mdl"
+}
+; =====================================================
 
 ; --- Make howitzer event a normal holdout event.
 modify:
@@ -137,3 +389,11 @@ add:
 	"BlockType" "1"
 	"classname" "env_physics_blocker"
 }
+; =====================================================
+; ================  NUISANCE CHANGES  =================
+; =====================================================
+filter:
+{
+	"model" "models/props_urban/oil_drum001.mdl"
+}
+
