--- a/cfg/stripper/zonemod/global_filters.cfg
+++ b/cfg/stripper/zonemod/global_filters.cfg
@@ -27,12 +27,9 @@ filter:
 }
 
 ; =====================================================
-; ================ ZONEMOD MELEE REMOVAL  =============
+; =============== ZONEMOD MELEE REMOVAL?  =============
 ; =====================================================
 filter:
-{
-	"classname" "weapon_melee_spawn"
-}
 {
 	"classname" "weapon_melee"
 }
@@ -47,7 +44,17 @@ modify:
 		"melee_weapon" "Any"
 	}
 }
-
+modify:
+{
+	match:
+	{
+		"classname" "weapon_melee_spawn"
+	}
+	insert:
+	{
+		"melee_weapon" "baseball_bat,cricket_bat,electric_guitar,frying_pan"
+	}
+}
 ; =====================================================
 ; =========  PROMOD HUNTINGRIFLE REPLACEMENT  =========
 ; =====================================================
