--- a/cfg/stripper/zonemod/maps/c11m2_offices.cfg
+++ b/cfg/stripper/zonemod/maps/c11m2_offices.cfg
@@ -1,4 +1,154 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- fix an unlikely stuck spot behind fire escape
+add:
+{
+	"model" "*149"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "936.10 7926.79 -33.18"
+	"angles" "0.00 270.00 0.00"
+}
+; --- block survivors from jumping onto metal boxes next to fire escape
+{
+	"origin" "4832 3416 405"
+	"mins" "-0.1 -11 -50"
+	"maxs" "79 0 1000"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- add survivor kill planes to the sides of the last buildings -
+; --- so survivors don't get distance points or spawn late tanks by jumping off
+{
+	"model" "*73"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "9545.6 3819 516"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*70"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "8180 3885 420"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"angles" "0 4 0"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*70"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "8360 3885 420"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"angles" "0 4 0"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*73"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "7674 6300 405"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*70"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "8256 4033 420"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"angles" "0 94 0"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*70"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "8256 4213 420"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"angles" "0 94 0"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*70"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "8256 4393 420"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"angles" "0 94 0"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*70"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "8256 4573 420"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"angles" "0 94 0"
+	"classname" "trigger_hurt"
+}
+{
+	"model" "*70"
+	"StartDisabled" "0"
+	"spawnflags" "1"
+	"origin" "7163 4513 420"
+	"nodmgforce" "0"
+	"filtername" "filter_survivor"
+	"damagetype" "32"
+	"damagemodel" "0"
+	"damagecap" "500"
+	"damage" "500"
+	"angles" "0 94 0"
+	"classname" "trigger_hurt"
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
