--- a/cfg/stripper/zonemod/maps/c11m5_runway.cfg
+++ b/cfg/stripper/zonemod/maps/c11m5_runway.cfg
@@ -1,4 +1,706 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+add:
+; --- ladders for extra vertical SI movement
+; --- ladders onto airport building
+{
+	"model" "*63"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	 "origin" "19.03 2947.34 46.52"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*63"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "19.03 2947.34 302.01"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*63"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-0.96 2947.34 474.01"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*63"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "19.03 968.59 46.52"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*63"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "19.03 968.59 302.01"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*63"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-0.96 968.59 474.01"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*62"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	 "origin" "19.03 -982.65 46.52"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*62"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "19.03 -982.65 302.01"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*62"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-0.96 -982.65 474.01"
+	"angles" "0.00 0.00 0.00"
+}
+; --- trim on top of airport to make rocketing easier
+{
+	"classname" "prop_dynamic"
+	"origin" "-6836 9572 567"
+	"angles" "0 0 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 10084.08 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 10596 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 11108 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 11620 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 12132 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 12644 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7144 9060.05 640"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7144 9571.95 640"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7156 8548 639.8"
+	"angles" "0 0 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7668 9572 639.8"
+	"angles" "0 180 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7348 8548 567"
+	"angles" "0 180 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 8547.92 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6824 8036 567"
+	"angles" "0 90 0"
+	"solid" "0"
+	"disableshadows" "1"
+	"rendercolor" "255 255 255"
+	"model" "models/props_street/building_trim_piece02_512_damaged.mdl"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/acunit2.mdl"
+	"solid" "6"
+	"origin" "-7184 9588 567"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 180 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/acunit2.mdl"
+	"solid" "6"
+	"origin" "-7178 8531 567"
+}
+
+; --- ladder to climb onto a broken plane head to the left of the saferoom ramp end
+{
+	"model" "*53"
+	"normal.z" "0.50"
+	"normal.y" "0.86"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-744.76 4095.30 156.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- ladder to climb onto middle airport departure ramp table pile
+{
+	"model" "*65"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "676.70 463.83 292.01"
+	"angles" "0.00 0.00 0.00"
+}
+; --- extra table on pile to make ladder more realistic
+{
+	"classname" "prop_dynamic"
+	"angles" "0 90 -100"
+	"disableshadows" "1"
+	"model" "models/props_interiors/table_folding.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-5998.5 10305 183"
+}
+; --- ladder to climb on top of ramp near gas
+{
+	"model" "*50"
+	"normal.z" "0.00"
+	"normal.y" "0.70"
+	"normal.x" "-0.70"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "5692.90 5879.10 -4.79"
+	"angles" "0.00 45.00 0.00"
+}
+; --- ladders to get onto white truck near escape plane
+{
+	"model" "*52"
+	"normal.z" "0.00"
+	"normal.y" "0.86"
+	"normal.x" "-0.50"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-13051.38 3307.23 12.49"
+	"angles" "0.00 270.00 0.00"
+}
+{
+	"model" "*52"
+	"normal.z" "0.00"
+	"normal.y" "-0.86"
+	"normal.x" "0.50"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "2828.90 13938.50 12.49"
+	"angles" "0.00 90.00 0.00"
+}
+; --- ladder to get onto a plane turbine near escape plane
+{
+	"model" "*66"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1300.78 -1443.29 4.00"
+	"angles" "0.00 0.00 0.00"
+}
+; --- ladder into a common-spawning room in the corner between escape and saferoom
+{
+	"model" "*62"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "19.03 -1077.65 58.02"
+	"angles" "0.00 0.00 0.00"
+}
+; --- ladders over rubble pile near above corner
+{
+	"model" "*52"
+	"normal.z" "0.00"
+	"normal.y" "0.86"
+	"normal.x" "-0.50"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-14611.67 2641.66 -2.00"
+	"angles" "0.00 270.00 0.00"
+}
+{
+	"model" "*52"
+	"normal.z" "0.00"
+	"normal.y" "-0.86"
+	"normal.x" "0.50"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1229.16 13365.00 -2.00"
+	"angles" "0.00 90.00 0.00"
+}
+; --- patch up a spot where there is no fire near the escape plane (no visual fire, so only survivor damage)
+{
+	"model" "*76"
+	"angles" "-0 -75 0"
+	"spawnflags" "3"
+	"origin" "-3372 9080 -128"
+	"nodmgforce" "0"
+	"damagetype" "8"
+	"damagemodel" "0"
+	"damagecap" "20"
+	"damage" "2"
+	"filtername" "filter_survivor"
+	"classname" "trigger_hurt"
+}
+; --- set fire to an army truck's engine, as standing on top of it had no common infected pathing
+{
+	"model" "*10"
+	"StartDisabled" "0"
+	"spawnflags" "3"
+	"origin" "-4439 10108 10"
+	"nodmgforce" "0"
+	"damagetype" "8"
+	"damagemodel" "0"
+	"damagecap" "20"
+	"damage" "2"
+	"classname" "trigger_hurt"
+}
+{
+	"origin" "-4420 10110 -110"
+	"start_active" "1"
+	"effect_name" "env_fire_large"
+	"classname" "info_particle_system"
+}
+{
+	"origin" "-4462 10088 -110"
+	"start_active" "1"
+	"effect_name" "env_fire_large"
+	"classname" "info_particle_system"
+}
+{
+	"origin" "-4441 10100 -110"
+	"start_active" "1"
+	"effect_name" "env_fire_large_smoke"
+	"classname" "info_particle_system"
+}
+; --- light for fire
+{
+	"classname" "light_dynamic"
+	"origin" "-4425 10107 -85"
+	"_cone" "0"
+	"_inner_cone" "0"
+	"_light" "226 132 75"
+	"angles" "0 0 0"
+	"brightness" "1"
+	"distance" "512"
+	"pitch" "0"
+	"spawnflags" "0"
+	"style" "1"
+	"spotlight_radius" "100"
+}
+; --- ladders onto white truck near new on-fire truck
+{
+	"model" "*52"
+	"normal.z" "0.00"
+	"normal.y" "-0.50"
+	"normal.x" "-0.86"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1266.07 2212.22 12.49"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*62"
+	"normal.z" "0.00"
+	"normal.y" "0.50"
+	"normal.x" "0.86"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "6328.78 5947.69 -113.50"
+	"angles" "0.00 30.00 0.00"
+}
+; --- improve physics on escape plane's propellors and back with invisible props
+; --- propellors
+{
+	"classname" "prop_dynamic"
+	"angles" "82 245 0"
+	"disableshadows" "1"
+	"model" "models/props_urban/oil_drum001.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-3868 9013 -26"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "82 245 0"
+	"disableshadows" "1"
+	"model" "models/props_urban/oil_drum001.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-4058 9108 -26"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "82 245 0"
+	"disableshadows" "1"
+	"model" "models/props_urban/oil_drum001.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-4443 9279 -26"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "82 245 0"
+	"disableshadows" "1"
+	"model" "models/props_urban/oil_drum001.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "-4638 9365 -26"
+	"rendermode" "10"
+}
+; --- back of plane
+{
+	"classname" "prop_dynamic"
+	"origin" "-4777 8646 -5"
+	"angles" "0 147 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4666 8574 -5"
+	"angles" "0 147 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4778 8669 -5"
+	"angles" "0 169 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4621 8595 -5"
+	"angles" "0 147 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4650 8644 -5"
+	"angles" "0 169 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4530 8605 -5"
+	"angles" "0 155 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4577 8559 -5"
+	"angles" "0 65 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4525 8533 -5"
+	"angles" "0 65 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4560 8513 -0.50"
+	"angles" "0 65 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4422 8545 -5"
+	"angles" "0 141 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4319.25 8462.25 -5"
+	"angles" "0 141 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4473 8529 -5"
+	"angles" "0 164 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4448 8475 -5"
+	"angles" "0 164 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4322 8438.5 -5"
+	"angles" "0 164 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4308 8434.5 -5"
+	"angles" "0 164 0"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4547.5 8544 37"
+	"angles" "5 65 90"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4547 8546 109"
+	"angles" "5 65 90"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4544 8552 181"
+	"angles" "5 65 90"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4491 8670 12"
+	"angles" "10 65.5 90"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4502 8642 82"
+	"angles" "60 65 90"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4528 8587 50"
+	"angles" "60 65 90"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4528 8587 196"
+	"angles" "60 65 90"
+	"solid" "6"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+; --- remove three hittables to compensate for all of the new ladders
+filter:
+{
+	"hammerid" "3499927"
+}
+{
+	"hammerid" "4251133"
+}
+{
+	"hammerid" "4373784"
+}
+; =====================================================
 ; =========  NEXTMOD PLANE CRASH FX REMOVAL  ==========
 ; =====================================================
 filter:
