--- a/cfg/stripper/zonemod/maps/c12m1_hilltop.cfg
+++ b/cfg/stripper/zonemod/maps/c12m1_hilltop.cfg
@@ -4,14 +4,63 @@
 ; --- infected ladder to climb above into the rocks without surfing up a hill
 add:
 {
-	"model" "*15"
-	"normal.z" "0.000000"
-	"normal.y" "0.000000"
-	"normal.x" "-1.000000"
+	"model" "*17"
+	"normal.z" "0.57"
+	"normal.y" "0.80"
+	"normal.x" "-0.17"
 	"team" "2"
 	"classname" "func_simpleladder"
-	"origin" "2145 -5070 505"
+	"origin" "-2279.66 -5954.44 5513.21"
+	"angles" "0.00 12.00 35.00"
 }
+;--- extra infected ladders to get out of pit in beginning
+{
+	"model" "*17"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1011.42 -4570.71 -712.46"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*14"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "57.95 643.85 -566.35"
+	"angles" "0.00 0.00 0.00"
+}
+;--- rocks for above ladders to meet up with
+{
+	"solid" "6"
+	"disableshadows" "1"
+	"origin" "-8140 -13965 -310"
+	"angles" "-95 0 -90"
+	"model" "models/props_wasteland/rock_moss04.mdl"
+	"classname" "prop_dynamic"
+}
+{
+	"solid" "6"
+	"disableshadows" "1"
+	"origin" "-8989 -13540 -302"
+	"angles" "-95 0 -90"
+	"model" "models/props_wasteland/rock_moss04.mdl"
+	"classname" "prop_dynamic"
+}
+; --- fix stuck spot near ammo building between trees and a rock
+{
+	"origin" "-11248 -9506 436"
+	"mins" "-42 -0.1 -0.1"
+	"maxs" "0.1 40 25"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+
 ; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
