--- a/cfg/stripper/zonemod/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/zonemod/maps/c3m1_plankcountry.cfg
@@ -1,8 +1,19 @@
 ; =====================================================
 ; =============     RL4D2L ADDITIONS    ===============
 ; =====================================================
-;--- one way drop
 add:
+;--- Ladder behind starting train
+{
+	"model" "*304"
+	"normal.z" "0.00"
+	"normal.y" "0.50"
+	"normal.x" "-0.86"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-7639.92 -4209.46 7.00"
+	"angles" "0.00 -30.00 0.00"
+}
+;--- one way drop
 {
 	"classname" "prop_dynamic"
 	"angles" "0 0 0"
@@ -194,20 +205,12 @@ modify:
 
 add:
 ; -- Saferoom, add for "Realism"
-{
-	"solid" "6"
-	"origin" "-11600 9379 160"
-	"angles" "0 -57 0"
-	"model" "models/props_urban/fence_gate001_256.mdl"
-	"classname" "prop_dynamic"
-}
-; -- Add Ambulance for Point of no return.
 ;{
-;   "solid" "6"
-;   "origin" "-11087 9611 159"
-;   "angles" "360 124 0"
-;   "model" "models/props_vehicles/ambulance.mdl"
-;   "classname" "prop_dynamic"
+;	"solid" "6"
+;	"origin" "-11600 9379 160"
+;	"angles" "0 -57 0"
+;	"model" "models/props_urban/fence_gate001_256.mdl"
+;	"classname" "prop_dynamic"
 ;}
 ; -- Add a lovely old tree for past the pond.
 {
@@ -241,14 +244,6 @@ add:
 	"model" "models/props_foliage/swamp_cluster01.mdl"
 	"classname" "prop_dynamic"
 }
-; -- Add some bodies to the Ambulance for "Realism".
-;{
-;   "solid" "0"
-;   "origin" "-11083 9504 160"
-;   "angles" "0 90 0"
-;   "model" "models/deadbodies/bodies128_a.mdl"
-;   "classname" "prop_dynamic"
-;}
 ; -- Add some Rocks to the Saferoom to spawn.
 {
 	"solid" "6"
@@ -257,14 +252,6 @@ add:
 	"model" "models/props_foliage/swamp_rock02.mdl"
 	"classname" "prop_dynamic"
 }
-; -- Add a lovely old tree cluster for near the ambulance to make it exploit and bug free.
-;{
-;   "solid" "6"
-;   "origin" "-10923 9610 160"
-;   "angles" "720 46 0"
-;   "model" "models/props_foliage/trees_cluster01.mdl"
-;   "classname" "prop_dynamic"
-;}
 ; - Add some swamp rocks
 {
 	"solid" "6"
@@ -281,6 +268,14 @@ add:
 	"model" "models/props_vehicles/suv_2001.mdl"
 	"classname" "prop_dynamic"
 }
+; -- Glass for suv
+{
+	"solid" "6"
+	"origin" "-12093 9993 165"
+	"angles" "360 231 0"
+	"model" "models/props_vehicles/suv_2001_glass.mdl"
+	"classname" "prop_dynamic"
+}
 ; -- Add a lovely old tree for past the pond.
 {
 	"solid" "6"
@@ -289,14 +284,6 @@ add:
 	"model" "models/props_foliage/oak_tree01.mdl"
 	"classname" "prop_dynamic"
 }
-; -- Add a hittable for past the pond.
-;{
-;   "origin" "-602 7959 -4"
-;   "angles" "0 127 0"
-;   "model" "models/props_vehicles/police_car_rural.mdl"
-;   "classname" "prop_physics"
-;}
-
 ; =====================================================
 ; ================  EXPLOITS BLOCKED  =================
 ; =====================================================
@@ -525,42 +512,6 @@ add:
 	"solid" "6"
 	"origin" "-10968 9586 167.25"
 }
-;{
-;   "classname" "prop_dynamic"
-;   "angles" "0 148 0"
-;   "disableshadows" "1"
-;   "model" "models/props_urban/oil_drum001.mdl"
-;   "rendercolor" "255 255 255"
-;   "solid" "6"
-;   "origin" "-914.58 4822.77 143.585"
-;}
-;{
-;   "classname" "prop_dynamic"
-;   "angles" "0 43 0"
-;   "disableshadows" "1"
-;   "model" "models/props_urban/oil_drum001.mdl"
-;   "rendercolor" "255 255 255"
-;   "solid" "6"
-;   "origin" "-915 4863 143.585"
-;}
-;{
-;   "classname" "prop_dynamic"
-;   "angles" "0 148 0"
-;   "disableshadows" "1"
-;   "model" "models/props_urban/oil_drum001.mdl"
-;   "rendercolor" "255 255 255"
-;   "solid" "6"
-;   "origin" "-914.58 4844.77 191.585"
-;}
-;{
-;   "classname" "prop_dynamic"
-;   "angles" "0 271.5 0"
-;   "disableshadows" "1"
-;   "model" "models/props_mill/wood_stack.mdl"
-;   "rendercolor" "255 255 255"
-;   "solid" "6"
-;   "origin" "-913.58 4846.77 113.585"
-;}
 {
 	"classname" "prop_dynamic"
 	"angles" "0 315 0"
