--- a/cfg/stripper/zonemod/maps/c8m4_interior.cfg
+++ b/cfg/stripper/zonemod/maps/c8m4_interior.cfg
@@ -1,4 +1,262 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+;--- Make elevator go back up the building much faster
+modify:
+{
+	match:
+	{
+		"targetname" "elevator_button"
+	}
+	insert:
+	{
+		"OnPressed" "elevatorSetMaxSpeed32501"
+	}
+}
+;--- set speed back to normal once it reaches the top (just in case)
+{
+	match:
+	{
+		"targetname" "elevator_top_relay"
+	}
+	insert:
+	{
+		"OnTrigger" "elevatorSetMaxSpeed1250-1"
+	}
+}
+;---make the numbers inside match this new speed (lengthy)
+{
+	match:
+	{
+		"targetname" "elevator_inside_number_timer"
+	}
+	replace:
+	{
+		"RefireTime" "0.67"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_number_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_number_timerEnable0-1"
+		"OnTrigger" "elevator_inside_left_on_relayTrigger1.75-1"
+		"OnTrigger" "elevator_inside_left_off_relayTrigger1.75-1"
+		"OnTrigger" "elevator_inside_right_on_relayTrigger1.75-1"
+		"OnTrigger" "elevator_inside_right_off_relayTrigger1.75-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_number_timerEnable3.5-1"
+		"OnTrigger" "elevator_inside_left_on_relayTrigger4.17-1"
+		"OnTrigger" "elevator_inside_left_off_relayTrigger4.17-1"
+		"OnTrigger" "elevator_inside_right_on_relayTrigger4.17-1"
+		"OnTrigger" "elevator_inside_right_off_relayTrigger4.17-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_right_on_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_number06_rightEnable1.75-1"
+		"OnTrigger" "elevator_inside_number07_rightEnable3.5-1"
+		"OnTrigger" "elevator_inside_number08_rightEnable5.25-1"
+		"OnTrigger" "elevator_inside_number09_rightEnable7-1"
+		"OnTrigger" "elevator_inside_number00_rightEnable8.75-1"
+		"OnTrigger" "elevator_inside_number01_rightEnable10.5-1"
+		"OnTrigger" "elevator_inside_number02_rightEnable12.25-1"
+		"OnTrigger" "elevator_inside_number03_rightEnable14-1"
+		"OnTrigger" "elevator_inside_number04_rightEnable15.75-1"
+		"OnTrigger" "elevator_inside_right_on_relay2Trigger17.5-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_number06_rightEnable0.67-1"
+		"OnTrigger" "elevator_inside_number07_rightEnable1.34-1"
+		"OnTrigger" "elevator_inside_number08_rightEnable2.01-1"
+		"OnTrigger" "elevator_inside_number09_rightEnable2.68-1"
+		"OnTrigger" "elevator_inside_number00_rightEnable3.35-1"
+		"OnTrigger" "elevator_inside_number01_rightEnable4.02-1"
+		"OnTrigger" "elevator_inside_number02_rightEnable4.69-1"
+		"OnTrigger" "elevator_inside_number03_rightEnable5.36-1"
+		"OnTrigger" "elevator_inside_number04_rightEnable6.03-1"
+		"OnTrigger" "elevator_inside_right_on_relay2Trigger6.70-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_right_off_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_number05_rightDisable1.75-1"
+		"OnTrigger" "elevator_inside_number06_rightDisable3.5-1"
+		"OnTrigger" "elevator_inside_number07_rightDisable5.25-1"
+		"OnTrigger" "elevator_inside_number08_rightDisable7-1"
+		"OnTrigger" "elevator_inside_number09_rightDisable8.75-1"
+		"OnTrigger" "elevator_inside_number00_rightDisable10.5-1"
+		"OnTrigger" "elevator_inside_number01_rightDisable12.25-1"
+		"OnTrigger" "elevator_inside_number02_rightDisable14-1"
+		"OnTrigger" "elevator_inside_number03_rightDisable15.75-1"
+		"OnTrigger" "elevator_inside_right_off_relay2Trigger17.5-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_number05_rightDisable0.67-1"
+		"OnTrigger" "elevator_inside_number06_rightDisable1.34-1"
+		"OnTrigger" "elevator_inside_number07_rightDisable2.01-1"
+		"OnTrigger" "elevator_inside_number08_rightDisable2.68-1"
+		"OnTrigger" "elevator_inside_number09_rightDisable3.35-1"
+		"OnTrigger" "elevator_inside_number00_rightDisable4.02-1"
+		"OnTrigger" "elevator_inside_number01_rightDisable4.69-1"
+		"OnTrigger" "elevator_inside_number02_rightDisable5.36-1"
+		"OnTrigger" "elevator_inside_number03_rightDisable6.03-1"
+		"OnTrigger" "elevator_inside_right_off_relay2Trigger6.70-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_left_off_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_number01_leftDisable26.25-1"
+		"OnTrigger" "elevator_inside_number00_leftDisable8.75-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_number01_leftDisable10.05-1"
+		"OnTrigger" "elevator_inside_number00_leftDisable3.35-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_left_on_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_number01_leftEnable8.75-1"
+		"OnTrigger" "elevator_inside_number02_leftEnable26.25-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_number01_leftEnable3.35-1"
+		"OnTrigger" "elevator_inside_number02_leftEnable10.05-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_right_on_relay2"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_right_on_relay3Trigger17.5-1"
+		"OnTrigger" "elevator_inside_number04_rightEnable15.75-1"
+		"OnTrigger" "elevator_inside_number03_rightEnable14-1"
+		"OnTrigger" "elevator_inside_number02_rightEnable12.25-1"
+		"OnTrigger" "elevator_inside_number01_rightEnable10.5-1"
+		"OnTrigger" "elevator_inside_number00_rightEnable8.75-1"
+		"OnTrigger" "elevator_inside_number09_rightEnable7-1"
+		"OnTrigger" "elevator_inside_number08_rightEnable5.25-1"
+		"OnTrigger" "elevator_inside_number07_rightEnable3.5-1"
+		"OnTrigger" "elevator_inside_number06_rightEnable1.75-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_right_on_relay3Trigger6.70-1"
+		"OnTrigger" "elevator_inside_number04_rightEnable6.03-1"
+		"OnTrigger" "elevator_inside_number03_rightEnable5.36-1"
+		"OnTrigger" "elevator_inside_number02_rightEnable4.69-1"
+		"OnTrigger" "elevator_inside_number01_rightEnable4.02-1"
+		"OnTrigger" "elevator_inside_number00_rightEnable3.35-1"
+		"OnTrigger" "elevator_inside_number09_rightEnable2.68-1"
+		"OnTrigger" "elevator_inside_number08_rightEnable2.01-1"
+		"OnTrigger" "elevator_inside_number07_rightEnable1.34-1"
+		"OnTrigger" "elevator_inside_number06_rightEnable0.67-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_right_off_relay2"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_right_off_relay3Trigger17.5-1"
+		"OnTrigger" "elevator_inside_number03_rightDisable15.75-1"
+		"OnTrigger" "elevator_inside_number02_rightDisable14-1"
+		"OnTrigger" "elevator_inside_number01_rightDisable12.25-1"
+		"OnTrigger" "elevator_inside_number00_rightDisable10.5-1"
+		"OnTrigger" "elevator_inside_number09_rightDisable8.75-1"
+		"OnTrigger" "elevator_inside_number08_rightDisable7-1"
+		"OnTrigger" "elevator_inside_number07_rightDisable5.25-1"
+		"OnTrigger" "elevator_inside_number06_rightDisable3.5-1"
+		"OnTrigger" "elevator_inside_number05_rightDisable1.75-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_right_off_relay3Trigger6.70-1"
+		"OnTrigger" "elevator_inside_number03_rightDisable6.03-1"
+		"OnTrigger" "elevator_inside_number02_rightDisable5.36-1"
+		"OnTrigger" "elevator_inside_number01_rightDisable4.69-1"
+		"OnTrigger" "elevator_inside_number00_rightDisable4.02-1"
+		"OnTrigger" "elevator_inside_number09_rightDisable3.35-1"
+		"OnTrigger" "elevator_inside_number08_rightDisable2.68-1"
+		"OnTrigger" "elevator_inside_number07_rightDisable2.01-1"
+		"OnTrigger" "elevator_inside_number06_rightDisable1.34-1"
+		"OnTrigger" "elevator_inside_number05_rightDisable0.67-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_right_off_relay3"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_number07_rightDisable5.25-1"
+		"OnTrigger" "elevator_inside_number06_rightDisable3.5-1"
+		"OnTrigger" "elevator_inside_number05_rightDisable1.75-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_number07_rightDisable2.01-1"
+		"OnTrigger" "elevator_inside_number06_rightDisable1.34-1"
+		"OnTrigger" "elevator_inside_number05_rightDisable0.67-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "elevator_inside_right_on_relay3"
+	}
+	delete:
+	{
+		"OnTrigger" "elevator_inside_number_timerDisable7-1"
+		"OnTrigger" "elevator_inside_number08_rightEnable5.25-1"
+		"OnTrigger" "elevator_inside_number07_rightEnable3.5-1"
+		"OnTrigger" "elevator_inside_number06_rightEnable1.75-1"
+	}
+	insert:
+	{
+		"OnTrigger" "elevator_inside_number_timerDisable2.68-1"
+		"OnTrigger" "elevator_inside_number08_rightEnable2.01-1"
+		"OnTrigger" "elevator_inside_number07_rightEnable1.34-1"
+		"OnTrigger" "elevator_inside_number06_rightEnable0.67-1"
+	}
+}
+;--- end of number editing
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
