--- a/cfg/stripper/zonemod/maps/uz_bunker.cfg
+++ b/cfg/stripper/zonemod/maps/uz_bunker.cfg
@@ -1,5 +1,342 @@
 ; Undead Zone 4
-
+; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- remove orange color correction
+filter:
+{
+	"hammerid" "593676"
+}
+; --- filter misleading ladders that don't work
+{
+	"hammerid" "778381"
+}
+{
+	"hammerid" "778389"
+}
+{
+	"hammerid" "778435"
+}
+{
+	"hammerid" "778455"
+}
+; --- clip off body bags in forklift room to make movement on it cleaner
+add:
+{
+	"origin" "-2698 -1761 416"
+	"mins" "-9 -145 -0.1"
+	"maxs" "133 0.1 13"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- block survivors from getting onto pipes in forklift room
+{
+	"origin" "-2425 -2304 587"
+	"mins" "-280 0 -0.1"
+	"maxs" "0 143 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- ladder for easy access up spiral staircase
+{
+	"model" "*72"
+	"normal.z" "0.00"
+	"normal.y" "0.98"
+	"normal.x" "0.17"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-910.85 -683.89 -967.65"
+	"angles" "0.00 170.00 0.00"
+}
+; --- clipping for staircase ladder for survivors
+{
+	"origin" "-1093 -1906 393"
+	"mins" "-135 0 -240"
+	"maxs" "0 0.1 0.1"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- ladders for better movement in pipe/water area
+{
+	"model" "*30"
+	"normal.z" "0.00"
+	"normal.y" "-0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-3223.62 -2693.05 -1399.23"
+	"angles" "0.00 90.00 0.00"
+}
+{
+	"model" "*30"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-3167.03 -2477.05 -1215.21"
+	"angles" "0.00 90.00 0.00"
+}
+; --- clipping for new pipe ladder
+{
+	"origin" "-2483 -1265 -72"
+	"mins" "-0.1 -222 -0.1"
+	"maxs" "50 0.1 0.1"
+	"initialstate" "1"
+	"BlockType" "0"
+	"classname" "env_physics_blocker"
+}
+; --- block some pipes in pipe room from survivors (CI pathing issues)
+{
+	"origin" "-2082 -2014 -85"
+	"mins" "-21 -35 -200"
+	"maxs" "0.1 0.1 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2639.5 -1642 -100"
+	"mins" "-49 -0.1 -200"
+	"maxs" "0.1 74 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2400 -1494 10"
+	"mins" "-293 -106 -40"
+	"maxs" "0.1 0.1 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2688 -1323 -40"
+	"mins" "-0.1 -71 -0.1"
+	"maxs" "13 0.1 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2540.5 -935 -45"
+	"mins" "-116 -0.1 -0.1"
+	"maxs" "0.1 41 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-2689 -1000 -45"
+	"mins" "-0.1 -0.1 -0.1"
+	"maxs" "34 250 300"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+{
+	"origin" "-1446 -1175 100"
+	"mins" "-0.1 -13 -200"
+	"maxs" "310 0.1 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- give infected access to tunnel before decontamination
+{
+	"model" "*72"
+	"normal.z" "0.00"
+	"normal.y" "-1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1460.35 -1515.03 -1271.98"
+	"angles" "0.00 0.00 0.00"
+}
+{
+	"model" "*72"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "489.03 -164.11 -1271.98"
+	"angles" "0.00 90.00 0.00"
+}
+; --- block survivors from jumping into tunnel
+{
+	"origin" "-670 -39 0"
+	"mins" "-95 -0 -0"
+	"maxs" "0 39 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- props to help show that a grate isn't able to be boomed or smoked through
+{
+	"classname" "prop_dynamic"
+	"origin" "-220 -385 126"
+	"angles" "0 90 0"
+	"solid" "0"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-292 -385 126"
+	"angles" "0 90 0"
+	"solid" "0"
+	"rendercolor" "255 255 255"
+	"model" "models/props_urban/metal_plate001.mdl"
+	"disableshadows" "1"
+}
+; --- block survivors from getting onto thin pipes in decontamination
+{
+	"origin" "-167 45 150"
+	"mins" "-68 -0.1 -0.1"
+	"maxs" "0.1 80 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- block survivors from jumping onto pipes before the elevator
+{
+	"origin" "-246 736 136"
+	"mins" "-143 -17 -0.1"
+	"maxs" "0.1 0.1 200"
+	"initialstate" "1"
+	"BlockType" "1"
+	"classname" "env_physics_blocker"
+}
+; --- fix elevator trigger being too generous for survivors
+modify:
+{
+	match:
+	{
+		"hammerid" "49281"
+	}
+	replace:
+	{
+		"origin" "-128 857 68"
+	}
+}
+;--- ladder fixing outside
+{
+	match:
+	{
+		"hammerid" "447758"
+	}
+	insert:
+	{
+		"origin" "-6.00 1.00 27.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "447527"
+	}
+	insert:
+	{
+		"origin" "7.00 -3.00 0.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "447535"
+	}
+	insert:
+	{
+		"origin" "-10.00 -25.00 3.84"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "571015"
+	}
+	insert:
+	{
+		"origin" "-14.00 0.00 0.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "571025"
+	}
+	insert:
+	{
+		"origin" "14.00 0.00 2.00"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "489013"
+	}
+	insert:
+	{
+		"origin" "-5.00 0.00 17.00"
+	}
+}
+; --- Prop for ladders
+add:
+{
+	"classname" "prop_dynamic"
+	"angles" "90 0 0"
+	"disableshadows" "1"
+	"model" "models/props_pipes/pipeset02d_128_001a_fixednormals.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "-1410 -258 40"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "90 90 0"
+	"disableshadows" "1"
+	"model" "models/props_pipes/pipeset02d_128_001a_fixednormals.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "-766 -113 40"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 0 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "37 1264 1360"
+}
+; --- ladder to escape stuck spot at very end saferoom
+{
+	"model" "*49"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "-0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-6428.43 2687.03 -13.00"
+	"angles" "0.00 270.00 0.00"
+}
+{
+	"model" "*49"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "-1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-574.03 -45.19 -39.96"
+	"angles" "0.00 0.00 0.00"
+}
+; =====================================================
 ; Remove circular path with computer button event - no distance points rewarded
 modify:
 {
